--- a/Changelog.txt
+++ b/Changelog.txt
@@ -27,6 +27,7 @@ Version 1.4.07-dev
  ! Changed the way Repair hands out XP, also added config options to control Repair XP
  ! Changed Swords "Counter Attack" ability from passive to active. Blocking is required to activate.
  ! Hardcore mode can now be toggled for each skill individually
+ ! Vampirism can now be enabled without having Skill Death Penalty enabled
  ! Admin and Party chat prefixes are now customizable
  ! Changed the color of party leader names in Party chat
  ! Moved all experience formula related settings from config.yml to experienceFormula.yml (This includes skill modifiers and curve modifiers)
