Formatting and localizing.

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -447,6 +447,7 @@ Commands.mmoupdate.InvalidType=[[RED]]{0} is not a valid database type.
 Commands.mmoupdate.Start=[[GRAY]]Starting conversion from {0} to {1}...
 Commands.mmoupdate.Finish=[[GRAY]]Database migration complete; the {1} database now has all data from the {0} database.
 Commands.mmoshowdb=[[YELLOW]]The currently used database is [[GREEN]]{0}
+Commands.mcconvert.Invalid=[[RED]]Unknown formula type! Valid types are: [[GREEN]]LINEAR [[RED]]and [[GREEN]]EXPONENTIAL.
 Commands.mcconvert.Same=[[RED]]Already using formula type {0}
 Commands.mcconvert.Start=[[GRAY]]Starting conversion from {0} to {1} curve
 Commands.mcconvert.Finish=[[GRAY]]Formula conversion complete; now using an {0} XP curve.
