--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -442,15 +442,15 @@ Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - Modify target
 Commands.mmoedit.AllSkills.1=[[GREEN]]Your level in all skills was set to {0}!
 Commands.mmoedit.Modified.1=[[GREEN]]Your level in {0} was set to {1}!
 Commands.mmoedit.Modified.2=[[RED]]{0} has been modified for {1}.
-Commands.mmoupdate.Same=[[RED]]You are already using the {0} database!
-Commands.mmoupdate.InvalidType=[[RED]]{0} is not a valid database type.
-Commands.mmoupdate.Start=[[GRAY]]Starting conversion from {0} to {1}...
-Commands.mmoupdate.Finish=[[GRAY]]Database migration complete; the {1} database now has all data from the {0} database.
+Commands.mcconvert.Database.Same=[[RED]]You are already using the {0} database!
+Commands.mcconvert.Database.InvalidType=[[RED]]{0} is not a valid database type.
+Commands.mcconvert.Database.Start=[[GRAY]]Starting conversion from {0} to {1}...
+Commands.mcconvert.Database.Finish=[[GRAY]]Database migration complete; the {1} database now has all data from the {0} database.
 Commands.mmoshowdb=[[YELLOW]]The currently used database is [[GREEN]]{0}
-Commands.mcconvert.Invalid=[[RED]]Unknown formula type! Valid types are: [[GREEN]]LINEAR [[RED]]and [[GREEN]]EXPONENTIAL.
-Commands.mcconvert.Same=[[RED]]Already using formula type {0}
-Commands.mcconvert.Start=[[GRAY]]Starting conversion from {0} to {1} curve
-Commands.mcconvert.Finish=[[GRAY]]Formula conversion complete; now using an {0} XP curve.
+Commands.mcconvert.Experience.Invalid=[[RED]]Unknown formula type! Valid types are: [[GREEN]]LINEAR [[RED]]and [[GREEN]]EXPONENTIAL.
+Commands.mcconvert.Experience.Same=[[RED]]Already using formula type {0}
+Commands.mcconvert.Experience.Start=[[GRAY]]Starting conversion from {0} to {1} curve
+Commands.mcconvert.Experience.Finish=[[GRAY]]Formula conversion complete; now using {0} XP curve.
 Commands.ModDescription=[[RED]]- Read brief mod description
 Commands.NoConsole=This command does not support console usage.
 Commands.Notifications.Off=Ability notifications toggled [[RED]]off
@@ -759,7 +759,7 @@ Commands.Description.mcstats=Show your mcMMO levels and XP
 Commands.Description.mctop=Show mcMMO leader boards
 Commands.Description.mmoedit=Edit mcMMO levels for a user
 Commands.Description.mmoupdate=Migrate mcMMO database from an old database into the current one
-Commands.Description.mcconvert=Converts formula types
+Commands.Description.mcconvert=Converts database types or experience formula types
 Commands.Description.mmoshowdb=Show the name of the current database type (for later use with /mmoupdate)
 Commands.Description.party=Control various mcMMO party settings
 Commands.Description.partychat=Toggle mcMMO party chat on/off or send party chat messages
