--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,7 +8,8 @@ Key:
   - Removal
 
 Version 1.4.07-dev
- + Added new experienceFormula config file! Has support for EXPONENTIAL formula curves.
+ + Added new experience.yml config file! Moved all experience related settings from config.yml to experience.yml
+ + Added support for EXPONENTIAL formula curves to experience.yml
  + Added new /mcconvert command to convert players levels and experience from one formula curve to another.
  + Added snow to excavation
  + Added new experience curve option. Cumulative curve, calculates experience needed for next level using power level.
@@ -30,7 +31,6 @@ Version 1.4.07-dev
  ! Vampirism can now be enabled without having Skill Death Penalty enabled
  ! Admin and Party chat prefixes are now customizable
  ! Changed the color of party leader names in Party chat
- ! Moved all experience formula related settings from config.yml to experienceFormula.yml (This includes skill modifiers and curve modifiers)
  ! Improved profile saving
  ! Improved partial name matcher
  ! Slightly improved update checker feedback
