--- a/Changelog.txt
+++ b/Changelog.txt
@@ -17,6 +17,8 @@ Version 1.4.07-dev
  + Added a 5 second cooldown after teleporting before Acrobatics XP can be earned. + Config option to disable
  + Added new API methods to ExperienceAPI to get a players rank on the leaderboards
  + Added new McMMOPlayerDeathPenaltyEvent, fired when a player dies and would lose levels
+ + Added new McMMOPlayerLevelChangeEvent, fired when a players level changes
+ + Added new McMMOPlayerLevelDownEvent, fired when a player loses levels
  = Fixed bug which allowed players to bypass fishing's exploit prevention
  = Fixed bug with Skull Splitter not finding the locale string
  = Fixed issue where locale strings could cause the scoreboard header to be longer than 16 characters.
