Update localization files. Adds Estonian translations for some strings.

--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -38,6 +38,7 @@ Axes.Combat.CritChance=[[RED]]Probabilidad de golpe cr\u00edtico: [[YELLOW]]{0}%
 Axes.Combat.CriticalHit=[[RED]]\u00a1GOLPE CR\u00cdTICO!
 Axes.Combat.GI.Proc=[[GREEN]]**GOLPEADO CON GRAN FUERZA**
 Axes.Combat.GI.Struck=[[RED]]**GOLPEADO POR IMPACTO MAYOR**
+Axes.Combat.SS.Struck=[[DARK_RED]]Golpeado mediante DIVISOR DE CRANEOS!
 Axes.Combat.SS.Length=[[RED]]Duraci\u00f3n de Parte Cr\u00e1neos: [[YELLOW]]{0}seg
 Axes.Effect.0=Parte Cr\u00e1neos (HABILIDAD)
 Axes.Effect.1=Distribuir Da\u00f1o en el \u00c1rea de Cobertura
@@ -116,7 +117,7 @@ Herbalism.Effect.0=Tierra Verde (HABILIDAD)
 Herbalism.Effect.1=Arar la Tierra, Triple Drops
 Herbalism.Effect.2=Pulgar Verde (Trigo)
 Herbalism.Effect.3=Autoplantar semillas cuando estas cosechando
-Herbalism.Effect.4=Pulgar Verde (Roca/Ladrillos de Piedra/Tierra)
+Herbalism.Effect.4=Pulgar verde (Bloques)
 Herbalism.Effect.5=Haces ladrillos mohosos o hacer crecer el pasto
 Herbalism.Effect.6=Dieta del Granjero
 Herbalism.Effect.7=Aumenta el hambre restaurada por la comida cultivada
@@ -228,7 +229,7 @@ Swords.Combat.Counter.Hit=[[DARK_RED]]\u00a1Alcanzado por un contra ataque!
 Swords.Combat.Countered=[[GREEN]]**CONTRA-ATACADO**
 Swords.Combat.SS.Struck=[[DARK_RED]]\u00a1Golpeado por ATAQUE DENTADO!
 Swords.Effect.0=Contra Ataque
-Swords.Effect.1=Reflejado {0} del da\u00f1o recibido
+Swords.Effect.1=Refleja {0} del da\u00f1o tomando mientras se bloquea
 Swords.Effect.2=Ataque Dentado (HABILIDAD)
 Swords.Effect.3={0} DMG AoE, Sangrado + AoE
 Swords.Effect.4=Ataque Dentado Sangriento+
@@ -389,6 +390,15 @@ Commands.mmoedit=[jugador] <habilidad> <nuevo valor> [[RED]] - Modificar habilid
 Commands.mmoedit.AllSkills.1=[[GREEN]]tu nivel en todas las habilidades fue cambiado a {0}!
 Commands.mmoedit.Modified.1=[[GREEN]]Tu nivel en {0} fue modificado a {1}!
 Commands.mmoedit.Modified.2=[[RED]]{0} ha sido modificado por {1}.
+Commands.mcconvert.Database.Same=[[RED]]Ya estas usando la base de datos {0}
+Commands.mcconvert.Database.InvalidType=[[RED]]{0} no en un tipo de base de datos valido.
+Commands.mcconvert.Database.Start=[[GRAY]]Comenzando conversion de {0} a {1}...
+Commands.mcconvert.Database.Finish=[[GRAY]]Migracion de la base de datos completada; La base datos {1} ahora tiene todos los datos de la base de datos {0}.
+Commands.mmoshowdb=[[YELLOW]]La base de datos usada actualmente es [[GREEN]]{0}
+Commands.mcconvert.Experience.Invalid=[[RED]]Tipo de formula desconocidaa Los tipos validos son: [[GREEN]]LINEAR [[RED]]y [[GREEN]]EXPONENTIAL.
+Commands.mcconvert.Experience.Same=[[RED]]Ya esta usando el tipo de formula {0}
+Commands.mcconvert.Experience.Start=[[GRAY]]Comenznado converso de la curva {0} a {1}
+Commands.mcconvert.Experience.Finish=[[GRAY]]Formula de conversion completa; ahora usando la curva XP {0}.
 Commands.ModDescription=[[RED]]- Lea la descripci\u00f3n breve del mod
 Commands.NoConsole=Este comando no es soportado desde la consola.
 Commands.Notifications.Off=Notificaciones de habilidad [[RED]]desactivadas
@@ -449,6 +459,7 @@ Commands.Usage.0=[[RED]]El uso correcto es /{0}
 Commands.Usage.1=[[RED]]El uso adecuado es /{0} {1}
 Commands.Usage.2=[[RED]]El uso correcto es /{0} {1} {2}
 Commands.Usage.3=[[RED]]El uso correcto es /{0} {1} {2} {3}
+Commands.Usage.FullClassName=Clase
 Commands.Usage.Level=Nivel
 Commands.Usage.Message=mensaje
 Commands.Usage.Page=pagina
@@ -560,7 +571,7 @@ Guides.Mining=[[DARK_AQUA]]Sobre Miner\u00eda:\n[[YELLOW]]La miner\u00eda consis
 Guides.Page.Invalid=Numero de pagina no disponible
 Guides.Page.OutOfRange=La pagina no existe, solo hay {0} paginas en total
 Guides.Repair=[[DARK_AQUA]] Acerca de Reparar:\n[[YELLOW]] Reparar permite el uso de un bloque de hierro para reparar armaduras y\n[[YELLOW]] herramientas, o un bloque de oro para salvar armaduras y herramientas.\n\n[[DARK_AQUA]] GANANDO XP:\n[[YELLOW]] Reparar herramientas o armaduras utilizando el Yunque mcMMO. Este es un\n[[YELLOW]] bloque de hierro por defecto y no debe ser confundido con\n[[YELLOW]] el Yunque de Minecraft vanilla.\n[[DARK_AQUA]] \u00bfC\u00f3mo puedo usar la reparaci\u00f3n?\n[[YELLOW]] Pon un yunque mcMMO y haga clic derecho para reparar el objeto\n[[YELLOW]] que estas sosteniendo. Esto consume 1 objeto en cada uso.\n\n[[DARK_AQUA]] \u00bfC\u00f3mo funciona la Reparaci\u00f3n Maestra?\n[[YELLOW]] La Reparaci\u00f3n maestra aumenta el monto de reparacion. El cantidad adicional\n[[YELLOW]] reparada se ve influida por el nivel de habilidad de reparaci\u00f3n.\n\n[[DARK_AQUA]] \u00bfC\u00f3mo funciona la Super reparaci\u00f3n?\n[[YELLOW]] La super reparacionr es una habilidad pasiva. Cuando se esta reparando un objeto,\n[[YELLOW]] otorga a los jugadores la oportunidad de reparar un elemento con\n[[YELLOW]] doble eficacia.\n\n\n\n\n[[DARK_AQUA]] \u00bfC\u00f3mo funciona la Forja Arcana?\n[[YELLOW]] Esta habilidad pasiva permite reparar objetos con una cierta\n[[YELLOW]] posibilidades de mantener sus encantamientos. Los encantamientos pueden estar\n[[YELLOW]] mantenidos en sus niveles actuales, Baja a un nivel m\u00e1s bajo,\n[[YELLOW]] o perderse por completo.\n\n\n\n[[DARK_AQUA]] \u00bfC\u00f3mo funciona el salvamento?\n[[YELLOW]] Pon un yunque de salvamiento mcMMO y haga clic derecho para salvar\n[[YELLOW]] el objeto que est\u00e1 actualmente sosteniendo.\n[[YELLOW]] Esto romper\u00e1 el elemento en partes y devolvera los lingotes utilizados.\n[[YELLOW]] Nota: S\u00f3lo se pueden salvar herramientas o armaduras completamente reparadas.
-Guides.Swords=[[DARK_AQUA]] Sobre espadas:\n[[YELLOW]] Esta habilidad reconpensa con bonificaciones de combate a cualquier persona que luche con una\n[[YELLOW]] espada.\n\n[[DARK_AQUA]] Ganando XP:\n[[YELLOW]] EL XP se obtiene en base a la cantidad de da\u00f1o hecho a los monstruos o\n[[YELLOW]] otros jugadores mientras se blande una espada.\n\n[[DARK_AQUA]] \u00bfC\u00f3mo funcionan los golpe dentados?\n[[YELLOW]] Los golpes dentados es una habilidad activa, se puede activar usando el\n[[YELLOW]] bot\u00f3n derecho del rat\u00f3n con una espada. Esta capacidad le permite hacer un\n[[YELLOW]] ataque aoe (\u00c1rea de Efecto). Este AoE te dara una bonificacion del 25%\n[[YELLOW]] da\u00f1o y causara un efecto de sangrado que dura 5 segundos.\n\n\n\n[[DARK_AQUA]] \u00bfC\u00f3mo funciona el contraataque ?\n[[YELLOW]] El contraataque es una habilidad pasiva. Al ser golpeado por monstruos,\n[[YELLOW]] tendr\u00e1 la posibilidad de reflejar el 50% del da\u00f1o\n[[YELLOW]] recibido.\n\n\n\n\n[[DARK_AQUA]] \u00bfC\u00f3mo funciona el sangrado?\n[[Amarillo]] El sangrado causa a los enemigos un da\u00f1o cada dos segundos. El\n[[YELLOW]] objetivo sangrara hasta que el efecto desaparezca, o muera,\n[[YELLOW]] lo que ocurra primero.\n[[YELLOW]] La duraci\u00f3n del sangrado se incrementa por su habilidad con la espada.
+Guides.Swords=[[DARK_AQUA]]Sobre espadas:\n[[YELLOW]]Esta habilidad premia con bonus a cualquiera combatiendo con una\n[[YELLOW]]espada.\n\n[[DARK_AQUA]]Ganando XP:\n[[YELLOW]]XP se consigue en base a la cantidad de da\u00f1os causado a los mobs o \n[[YELLOW]]a otro sjugadores cuando se blande la espada.\n\n[[DARK_AQUA]]Como funcionar Golpe Dentado?\n[[YELLOW]]Golpe Dentrado es una habilidad activa, la puede activar haciendo\n[[YELLOW]]click.derecho con una espada. Esta habilidad te permite hacer frente con \n[[YELLOW]]un golpe AoE (Area de efecto). Este AoE te daa un bonus del 25%\n[[YELLOW]]del da\u00f1o y inflingira un efecto sangrado que dura 5 tiempos.\n\n\n\n[[DARK_AQUA]]Como funciona el Counter Attack?\n[[YELLOW]]Counter Attack es una habilidad activa. Cuando se bloquean y reciben\n[[YELLOW]]golpes de los mobs, tendras la posibilidad de reflejar el 50% del \n[[YELLOW]]da\u00f1o recibido.\n\n\n\n\n[[DARK_AQUA]]Como funciona el sangrado?\n[[YELLOW]]El sangrado causa que el enemigo sea da\u00f1ado cada 2 segundos. El \n[[YELLOW]]objetivo sangrara hasta que termine el effecto, o muera. \n[[YELLOW]]lo primero que venga.\n[[YELLOW]]La duraci\u00f3n de este efecto aumenta con tu nivel de espada..
 Guides.Smelting=Muy pronto...
 Guides.Taming=[[DARK_AQUA]] Acerca de domesticaci\u00f3n:\n[[YELLOW]] Domesticar dar\u00e1 a los jugadores diversos bonus de combate cuando se usa\n[[Amarillo]] lobos domesticados.\n\n[[DARK_AQUA]] GANANDO XP:\n[[YELLOW]] Para ganar experiencia en esta habilidad, es necesario domar lobos / ocelotes o\n[[YELLOW]] entrar en combate con los lobos.\n\n[[DARK_AQUA]] \u00bfC\u00f3mo funciona Llamar a los salvages?\n[[YELLOW]] Llamar a los salvajes es una habilidad activa que le permitir\u00e1 convocar\n[[YELLOW]] un lobo o un ocelote a tu lado. Usted puede hacer esto\n[[YELLOW]] haciendo click izquierdo del rat\u00f3n mientras sostienes los huesos o pescado.\n\n[[DARK_AQUA]] \u00bfComo funciona la Tradicion de bestias?\n[[YELLOW]] La tradicion Bestia permite a los jugadores inspeccionar sus mascotas para comprobar sus\n[[YELLOW]] Estadisticas de lobos y ocelotes. Haga clic izquierdo en un lobo o el ocelote para utilizar\n[[YELLOW]] Tradici\u00f3n de bestias.\n[[DARK_AQUA]] \u00bfC\u00f3mo funciona Gore?\n[[YELLOW]] Gore es una habilidad pasiva que tiene una posibilidad de infligir un\n[[YELLOW]] efecto sangrado en los objeticos de tus lobos.\n\n[[DARK_AQUA]] \u00bfC\u00f3mo funciona garra afilada?\n[[YELLOW]] Garra afilada proporciona un bonus de da\u00f1o al da\u00f1o hecho\n[[YELLOW]] por los lobos. El bonus de da\u00f1o depende de su nivel de doma.\n\n[[DARK_AQUA]] \u00bfC\u00f3mo funciona la conciencia ambiental?\n[[YELLOW]] Esta habilidad pasiva permitir\u00e1 a los lobos teletransportarse a usted cuando\n[[YELLOW]] esten en peligros cercanos, como Cactus / Lava. Tambi\u00e9n dar\u00e1\n[[YELLOW]] lobos inmunidad a estos da\u00f1os.\n\n[[DARK_AQUA]] \u00bfC\u00f3mo funciona la piel gruesa?\n[[YELLOW]] Esta habilidad pasiva reduce da\u00f1os y los lobos\n[[YELLOW]] resistente al fuego.\n[[DARK_AQUA]] \u00bfC\u00f3mo funciona la prueba de choque?\n[[YELLOW]] Esta habilidad pasiva reduce el da\u00f1o hecho a los lobos\n[[YELLOW]] de las explosiones.\n[[DARK_AQUA]] \u00bfC\u00f3mo funciona el servicio de comida rapida?\n[[YELLOW]] Esta habilidad pasiva da lobos la oportunidad de sanar cuando\n[[YELLOW]] lleven a cabo un ataque.
 Guides.Unarmed=[[DARK_AQUA]] Acerca de desarmar:\n[[YELLOW]] Desarmar dara a los jugadores diversos bonus de combate cuando se usan\n[[Amarillo]] los pu\u00f1os como arma.\n\n[[DARK_AQUA]] GANANDO XP:\n[[YELLOW]] La XP se obtiene en base a la cantidad de da\u00f1o hecho a los mounstruos\n[[YELLOW]] o a otros jugadores cuando estan desarmados.\n\n[[DARK_AQUA]] \u00bfC\u00f3mo funciona Berserker?\n[[AMARILLO]] Beserker es una capacidad activa que se activa al\n[[YELLOW]] hacer click derecho. En el modo de Beserker, inflinge un 50% m\u00e1s\n[[YELLOW]] da\u00f1o y se puede romper materiales d\u00e9biles al instante, como\n[[YELLOW]] la tierra y la hierba.\n[[DARK_AQUA]] \u00bfC\u00f3mo funciona el Brazo de Hierro?\n[[YELLOW]] Brazo de Hierro aumenta el da\u00f1o infligido al golpear mounstruos o\n[[YELLOW]] jugadores con los pu\u00f1os.\n[[DARK_AQUA]] \u00bfC\u00f3mo funciona el desvio de flechas?\n[[YELLOW]] El desvio de flecha es una habilidad pasiva que le da la oportunidad\n[[YELLOW]] de desviar las flechas disparadas por los esqueletos u otros jugadores.\n[[YELLOW]] La flecha caer\u00e1 inofensivamente al suelo.\n\n[[DARK_AQUA]] \u00bfC\u00f3mo funciona el agarre de hierro?\n[[YELLOW]] El agarre de hierro es una habilidad pasiva que permite no ser desarmado por otros jugadores. A medida que\n[[YELLOW]] aumenta el nivel de agarre de hierro, aumenta la posibilidad de evitar ser desarmado.\n[[DARK_AQUA]] \u00bfC\u00f3mo funciona Desarmar?\n[[YELLOW]] Esta habilidad pasiva permite a los jugadores desarmar a otros jugadores,\n[[YELLOW]] causando que los objetos equipados del objetivo se caigan al suelo.
@@ -607,11 +618,11 @@ Vampirism.Killer.Failure=D]][mcMMO] [[YELLOW]]{0}[[GRAY]] no era lo suficiente h
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]Has robado [[BLUE]]{0}[[DARK_AQUA]] niveles de [[YELLOW]]{1}.
 Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] fue incapaz de robarte tus conocimientos!!
 Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] te ha robado [[BLUE]]{1}[[DARK_RED]] niveles!
-Hardcore.Disabled=[[GOLD]][mcMMO] Modo Hardcore desactivado.
-Hardcore.Enabled=[[GOLD]][mcMMO] Modo Hardcore activado.
+Hardcore.Disabled=[[GOLD]][mcMMO] Modo Hardcore desactivado. {0}
+Hardcore.Enabled=[[GOLD]][mcMMO] Modo Hardcore activado. {0}
 Hardcore.PercentageChanged=[[GOLD]][mcMMO] El porcentaje de estados de perdida fue cambiado a {0}.
-Vampirism.Disabled=[[GOLD]][mcMMO] Modo vampiro desactivado.
-Vampirism.Enabled=[[GOLD]][mcMMO] Modo vampiro activado.
+Vampirism.Disabled=[[GOLD]][mcMMO] Modo vampirico desactivado. {0}
+Vampirism.Enabled=[[GOLD]][mcMMO] Modo vampirico activado. {0}
 Vampirism.PercentageChanged=[[GOLD]][mcMMO]  El porcentaje de estado sanguijuela fue cambiado a {0}.
 Spout.Donate=[[YELLOW]][mcMMO] Donar!
 Spout.LevelUp.1=[[GREEN]]Level Up!
@@ -664,6 +675,9 @@ Commands.Description.mcremove=Elimina  a un usuario de la base de datos de mcMMO
 Commands.Description.mcstats=Muestra tu nivel y XP mcMMO
 Commands.Description.mctop=Mostrar tablas de clasificaci\u00f3n mcMMO
 Commands.Description.mmoedit=Editar niveles mcMMO de un usuario
+Commands.Description.mmoupdate=Migrar la base de datos mcMMO de una base de datos antigua a una nueva actual
+Commands.Description.mcconvert=Convierte tipos de basa de datos o tipos de formulas de experiencia.
+Commands.Description.mmoshowdb=Muestra el nombre del tipo de base de datos actual(para mas tarde usarla con  /mmoupdate)
 Commands.Description.party=Controlar varias configuraciones de los grupos mcMMO
 Commands.Description.partychat=Activar/Desactivar el chat de grupo o enviar  mensajes por el chat de grupo
 Commands.Description.ptp=Teletransportate a un mienbro de tu grupo mcMMO
@@ -674,3 +688,12 @@ Commands.Description.xplock=Bloquear la barra de experiencia mcMMO de una habili
 Commands.Description.xprate=Modifica la velocidad del mcMMO XP o  comieza un evento de mcMMO XP
 UpdateChecker.outdated=Estas usando una version de mcMMO antigua!
 UpdateChecker.newavailable=Hay una nueva version disponible en BukkitDev
+Scoreboard.Header.PlayerStats=Estadisticas de mcMMO
+Scoreboard.Header.PlayerRank=Rankings de mcMMO
+Scoreboard.Header.PlayerInspect=Estadisticas mcMMO:
+Scoreboard.Header.PowerLevel=Nivel de poder
+Scoreboard.Misc.PowerLevel=Nivel de poder
+Scoreboard.Misc.Level=Nivel
+Scoreboard.Misc.CurrentXP=XP actual
+Scoreboard.Misc.RemainingXP=XP restante
+Scoreboard.Misc.Overall=Total
