--- a/src/main/resources/locale/locale_hu_HU.properties
+++ b/src/main/resources/locale/locale_hu_HU.properties
@@ -1,3 +1,4 @@
+Acrobatics.Ability.Proc=[[GREEN]]**Kecses Landol\u00e1s**
 Acrobatics.Combat.Proc=[[GREEN]]**Elker\u00fclve**
 Acrobatics.Listener=Akrobatika:
 Acrobatics.SkillName=AKROBATIKA
@@ -19,6 +20,8 @@ Excavation.Ability.Lower=[[GRAY]]**LETETTED AZ \u00c1S\u00d3DAT**
 Excavation.Ability.Ready=[[GREEN]]**EL\u0150VETTED AZ \u00c1S\u00d3DAT**
 Excavation.Listener=\u00c1s\u00e1s:
 Excavation.SkillName=\u00c1S\u00c1S
+Excavation.Skills.GigaDrillBreaker.Refresh=[[GREEN]]A TE [[YELLOW]]Giga B\u00e1ny\u00e1sz B\u00e1ny\u00e1sz Cs\u00e1k\u00e1ny [[GREEN]]k\u00e9pesseged friss\u00fclt!
+Excavation.Skills.GigaDrillBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] haszn\u00e1latban [[RED]]Giga B\u00e1ny\u00e1sz Cs\u00e1k\u00e1ny!
 Excavation.Skillup=[[YELLOW]]\u00c1s\u00e1s fejl\u0151d\u00f6tt {0} szinttel. \u00d6sszesen: ({1})
 Fishing.Effect.10=J\u00e9g Horg\u00e1szat
 Fishing.ItemFound=[[GRAY]]Kincs megtal\u00e1lva!
@@ -29,6 +32,7 @@ Herbalism.Ability.Ready=[[GREEN]]**EL\u0150K\u00c9SZ\u00cdTETTED A KAP\u00c1DAT*
 Herbalism.Listener=Gy\u00f3gyn\u00f6v\u00e9nytan:
 Herbalism.SkillName=GY\u00d3GYN\u00d6V\u00c9NYTAN
 Herbalism.Skillup=[[YELLOW]]Gy\u00f3gyn\u00f6v\u00e9nytan fejl\u0151d\u00f6tt {0} szinttel. \u00d6sszesen: ({1})
+Mining.Ability.Length=[[RED]]Szupercs\u00e1k\u00e1ny t\u00e1vols\u00e1g: [[YELLOW]]{0}s
 Mining.Ability.Lower=[[GRAY]]**LETETTED A CS\u00c1K\u00c1NYOD**
 Mining.Ability.Ready=[[GREEN]]**CS\u00c1K\u00c1NYOD K\u00c9SZEN \u00c1LL**
 Mining.Listener=B\u00e1ny\u00e1sz\u00e1s:
@@ -66,6 +70,8 @@ Swords.Listener=Kardok:
 Swords.SkillName=KARDOK
 Swords.Skills.SS.On=[[GREEN]]**F\u0170R\u00c9SZES CSAP\u00c1S AKTIV\u00c1LVA**
 Swords.Skillup=[[YELLOW]]Harc fejl\u0151d\u00f6tt {0} szinttel. \u00d6sszesen: ({1})
+Taming.Effect.11=Robban\u00e1si Sebz\u00e9s Ellen\u00e1ll\u00e1s
+Taming.Effect.16=Gyors Kaja Szolg\u00e1ltat\u00e1s
 Taming.Listener.Wolf=[[DARK_GRAY]]A farkasod visszat\u00e9rt hozz\u00e1d...
 Taming.Listener=Szelid\u00edt\u00e9s:
 Taming.SkillName=SZELID\u00cdT\u00c9S
@@ -81,10 +87,15 @@ Woodcutting.Ability.0=Lev\u00e9l F\u00faj\u00f3
 Woodcutting.Ability.1=Elf\u00fajja a leveleket.
 Woodcutting.Listener=Fav\u00e1g\u00e1s:
 Woodcutting.SkillName=FAV\u00c1G\u00c1S
+Woodcutting.Skills.TreeFeller.Off=[[RED]]**Fa D\u00f6nt\u00e9s befejezve**
+Woodcutting.Skills.TreeFeller.On=[[GREEN]]**FA D\u00d6NT\u0150 AKTIV\u00c1LVA **
+Woodcutting.Skills.TreeFeller.Other.On=[[GREEN]]{0}[[DARK_GREEN]] haszn\u00e1latban [[RED]]Fa D\u00f6nt\u0151!
 Woodcutting.Skills.TreeFellerThreshold=[[RED]]Ez a fa t\u00fal nagy!
 Woodcutting.Skillup=[[YELLOW]]Fav\u00e1g\u00e1s fejl\u0151d\u00f6tt {0} szinttel. \u00d6sszesen: ({1})
+Ability.Generic.Refresh=[[GREEN]]**K\u00c9PESS\u00c9GEK FRISS\u00cdTVE!**
 Ability.Generic.Template=[[RED]]{0}: [[YELLOW]]{1}
 Combat.BeastLoreHealth=[[DARK_AQUA]]\u00c9let ([[GREEN]]{0}[[DARK_AQUA]]/{1})
+Combat.BeastLoreOwner=[[DARK_AQUA]]Tulajdonos ([[RED]]{0}[[DARK_AQUA]])
 Combat.TouchedFuzzy=[[DARK_RED]]Bolyhosat \u00e9rintettem. Elsz\u00e9d\u00fcltem.
 Commands.AdminChat.Off=Admin Chat [[RED]]kikapcsolva
 Commands.AdminChat.On=Admin Chat [[RED]]bekapcsolva
@@ -96,8 +107,10 @@ Commands.GodMode.Forbidden=[mcMMO] Istenm\u00f3d nem lehets\u00e9ges ebben a vil
 Commands.Invite.Accepted=[[GREEN]]Megh\u00edv\u00e1st sikeresen elfogadtad {0} party-ra!
 Commands.Invite.Success=[[GREEN]]Megh\u00edv\u00f3 sikeresen elk\u00fcldve.
 Commands.mcc.Header=[[RED]]---[][[YELLOW]]mcMMO Parancsok[[RED]][]---
+Commands.mcgod=[[RED]]- V\u00e1lt\u00e1s GodModba
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - M\u00f3dos\u00edtva
 Commands.Other=[[GREEN]]--Egy\u00e9b Parancsok--
+Commands.Party.Accept=[[RED]]- Parti megh\u00edv\u00e1s elfogadva
 Commands.Party.Chat.Off=Party Chat [[RED]]kikapcsolva
 Commands.Party.Chat.On=Party Chat [[GREEN]]bekapcsolva
 Commands.Party.Commands=[[GREEN]]--Party Parancsok--
@@ -105,10 +118,13 @@ Commands.Party.Invite.0=[[RED]]FIGYELEM: [[GREEN]]Kapt\u00e1l egy party megh\u00
 Commands.Party.Rename=[[GRAY]]A party \u00faj neve: [[WHITE]]{0}
 Commands.Party.Kick=[[RED]]Kidobtak a csoportb\u00f3l {0}!
 Commands.Party.Leave=[[RED]]Elhagytad a party-t
+Commands.Party.Quit=[[RED]]- Kil\u00e9pt\u00e9l a jelenlegi partib\u00f3l
+Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO[[BLUE]] Energia szint [[YELLOW]Ranglista--
 Commands.PowerLevel=[[DARK_RED]]POWER LEVEL: [[GREEN]]{0}
 Commands.Skill.Leaderboard=[[YELLOW]]--mcMMO [[BLUE]]{0}[[YELLOW]] Dics\u0151s\u00e9glista--
 Commands.Stats.Self=STATISZTIK\u00c1ID
 Commands.Stats=[[RED]]- mcMMO Statisztik\u00e1d
+Commands.ToggleAbility=[[RED]]- K\u00e9pess\u00e9g aktiv\u00e1l\u00e1sa jobb gombbal
 Commands.Usage.PartyName=n\u00e9v
 Commands.Usage.Password=jelsz\u00f3
 Party.InformedOnJoin={0} [[GREEN]]csatlakozott a party-dba
@@ -124,6 +140,7 @@ Party.ShareMode.Random=V\u00c9LETLEN
 Party.ItemShare.Category.Mining=B\u00e1ny\u00e1sz\u00e1s
 Party.ItemShare.Category.Woodcutting=Fav\u00e1g\u00e1s
 Commands.XPGain.Acrobatics=Es\u00e9s
+Commands.XPGain.Axes=Sz\u00f6rnyek T\u00e1mad\u00e1sa
 Commands.XPGain.Excavation=\u00c1sni \u00e9s kincset tal\u00e1lni.
 Commands.XPGain.Herbalism=N\u00f6v\u00e9nyek betakar\u00edt\u00e1sa
 Commands.XPGain.Mining=K\u0151 \u00e9s \u00e9rcek kib\u00e1ny\u00e1sz\u00e1sa
@@ -144,6 +161,7 @@ Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/
 Skills.TooTired=[[RED]]T\u00fal f\u00e1radt vagy hogy haszn\u00e1ld ezt a k\u00e9pess\u00e9get. [[YELLOW]]({0}s)
 Stats.Header.Combat=[[GOLD]]-=HARCI K\u00c9PZETTS\u00c9GEK=-
 Stats.Header.Gathering=[[GOLD]]-= GY\u0170JT\u00d6GET\u0150 K\u00c9PESS\u00c9GEK=-
+Stats.Header.Misc=[[GOLD]]-=EGY\u00c9B SKILLEK=-
 Stats.Own.Stats=[[GREEN]][mcMMO] Statisztik\u00e1k
 Spout.LevelUp.1=[[GREEN]]Szintet l\u00e9pt\u00e9l!
 Spout.Menu.ExitButton=KIJ\u00c1RAT
