--- a/src/main/resources/locale/locale_sv.properties
+++ b/src/main/resources/locale/locale_sv.properties
@@ -1,43 +1,100 @@
 Acrobatics.Combat.Proc=[[GREEN]]**Duckade**
+Acrobatics.Listener=Akrobatik:
 Acrobatics.SkillName=AKROBATIK
 Acrobatics.Skillup=[[YELLOW]]Akrobatikf\u00e4rdigheten \u00f6kade med {0}. Totalt ({1})
 Archery.Skillup=[[YELLOW]]Pilskyttef\u00e4rdigheten \u00f6kade med {0}. Totalt ({1})
 Axes.Combat.GI.Struck=[[RED]]**SLAGEN AV ST\u00d6RRE EFFEKT**
+Axes.Combat.SS.Length=[[RED]]Skallsplittrare l\u00e4ngd [[YELLOW]]{0}s
+Axes.Effect.3=Dubbel Skada
+Axes.Effect.5=L\u00e4gger till bonus skada
+Axes.Skills.SS.On=[[GREEN]]**Skallsplittrare AKTIVERAD**
+Axes.Skills.SS.Refresh=[[GREEN]]Your [[YELLOW]Skallsplittrar [[GREEN]]f\u00f6rm\u00e5gan \u00e4r vederkvickad!
 Axes.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] har anv\u00e4nt [[RED]]Skallsplittrare!
+Axes.Skillup=[[YELLOW]]Yxf\u00e4rdigheten har \u00f6kat med {0}. Totalt ({1})
+Excavation.Listener=Gr\u00e4vning:
 Excavation.SkillName=Gr\u00e4vning
+Excavation.Skills.GigaDrillBreaker.On=[[GREEN]]**GIGA BORR KROSSAREN AKTIVERAD**
+Excavation.Skillup=[[YELLOW]]Gr\u00e4vningsf\u00e4rdigheten har \u00f6kat med {0}. Totalt ({1})
 Fishing.ItemFound=[[GRAY]]Skatt hittad!
+Herbalism.Ability.GTh=[[GREEN]]**GR\u00d6NA FINGRAR**
 Herbalism.Listener=V\u00e4xtk\u00e4nnedom:
+Herbalism.Skills.GTe.Refresh=[[GREEN]]Dina[[YELLOW]]Gr\u00f6na fingrar  [[GREEN]]f\u00f6rm\u00e5ga \u00e4r vederkvickad!
+Herbalism.Skills.GTe.Other.Off=[[RED]Gr\u00f6na fingrar[GREEN]] har avklingat f\u00f6r [[YELLOW]]{0}
 Mining.Ability.Length=[[RED]]Superbrytarl\u00e4ngd: [[YELLOW]]{0}s
+Mining.Ability.Lower=[[GRAY]]**DU S\u00c4NKER DIN HACKA**
 Mining.Ability.Ready=[[GREEN]]**DU F\u00d6RBEREDER DIN HACKA**
+Mining.Listener=Gruvdrift:
+Mining.Skills.SuperBreaker.Other.Off=[[RED]]Supebrytning[[GREEN]] har avklingat f\u00f6r [[YELLOW]]{0}
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]Din [[YELLOW]]Superbrytar [[GREEN]]f\u00f6rm\u00e5ga har uppdaterats!
 Mining.Skillup=[[YELLOW]]Hackf\u00e4rdigheten \u00f6kade med {0}. Totalt ({1})
+Mining.Blast.Radius.Increase=[[RED]]\u00d6KNING AV SPR\u00c4NGNINGSRADIEN: [[YELLOW]]+{0}
 Mining.Blast.Refresh=[[GREEN]]Din [[YELLOW]]Explosionshacknings [[GREEN]]f\u00f6rm\u00e5ga \u00e4r fulladdad!
+Repair.Effect.0=Reparera
+Repair.Effect.2=Reparationsm\u00e4stare
+Repair.Effect.3=\u00d6kad reparationsm\u00e4ngd
+Repair.Effect.4=Super reparation
+Repair.Effect.5=Dubbel effektivitet
+Repair.Effect.6=Diamant Reparation ({0}+ SKILL)
+Repair.Effect.7=Reparera Diamant-verktyg och rustning
+Repair.Effect.8=Magisk smide
 Repair.Effect.9=Reparera magiska objekt
+Repair.Listener=Reparera
+Repair.SkillName=Reparera
 Repair.Skills.AdeptDiamond=[[DARK_RED]]Du \u00e4r inte skicklig nog f\u00f6r att reparera Diamant.
 Repair.Skills.AdeptGold=[[DARK_RED]]Du \u00e4r inte skicklig nog f\u00f6r att reparera Guld.
 Repair.Skills.AdeptStone=[[DARK_RED]]Du \u00e4r inte skicklig nog f\u00f6r att reparera Sten.
+Repair.Skillup=[[YELLOW]]Smidesf\u00e4rdigheten \u00f6kade med {0}. Totalt ({1})
+Repair.Arcane.Chance.Downgrade=[[GRAY]]AF Chans f\u00f6r nedgradering: [[YELLOW]]{0}%
+Repair.Arcane.Chance.Success=[[GRAY]]AF Framg\u00e5ngsgrad: [[YELLOW]]{0}%
 Repair.Arcane.Fail=[[RED]]Sv\u00e5rbegriplig kraft har permanent l\u00e4mnat f\u00f6rem\u00e5let.
+Repair.Arcane.Lost=[[RED]]Du har inte f\u00e4rdigheter nog f\u00f6r att beh\u00e5lla n\u00e5gra f\u00f6rtrollningar
 Swords.Ability.Lower=[[GRAY]]**DU S\u00c4NKER DITT SV\u00c4RD**
+Swords.Ability.Ready=[[GREEN]]**DU G\u00d6R DIG REDO MED SV\u00c4RDET**
 Swords.Combat.Bleeding.Stopped=[[GRAY]]F\u00f6rbl\u00f6dningen har [[GREEN]]stoppats[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**FIENDEN BL\u00d6DER**
+Swords.Combat.Countered=[[GREEN]]**MOTATTACK**
+Swords.Combat.SS.Struck=[[DARK_RED]]Tr\u00e4ffad av S\u00c5GTANDAT SLAG:
+Swords.Listener=Sv\u00e4rd:
 Swords.Skills.SS.On=[[GREEN]]**S\u00c5GTANDADE SLAG AKTIVERADE**
+Swords.Skills.SS.Other.Off=[[RED]]S\u00e5gtandat slag[[GREEN]] hat avklingat h\u00e4r f\u00f6r [[YELLOW]]{0}
+Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] har anv\u00e4nt [[RED]]S\u00e5gtandat slag!
 Taming.Ability.Bonus.2=Tjock P\u00e4ls
+Taming.Effect.10=Shocks\u00e4ker
+Taming.Effect.11=Explotionsskademinskning
+Taming.Effect.12=Det vildas rop
+Taming.Effect.13=Frammana ett djur till din sida
+Taming.Effect.14=[[GRAY]]COTW (Ocelot): Huka och v\u00e4nster-klicka med {0} Fisk i handen
+Taming.Listener.Wolf=[[DARK_GRAY]]din varg rusar tillbaka till dig...
+Taming.Skillup=[[YELLOW]]T\u00e4mjningsf\u00e4rdigheten \u00f6kade med {0}. Totalt ({1})
+Unarmed.Ability.Berserk.Length=[[RED]]Berserk l\u00e4ngd: [[YELLOW]]{0}s
+Unarmed.Listener=Obev\u00e4pnad
 Unarmed.Skills.Berserk.Off=[[RED]]**B\u00e4rs\u00e4rk slut**
+Unarmed.Skills.Berserk.Other.Off=[[RED]]B\u00e4rs\u00e4rk[[GREEN]] har avklingat f\u00f6r [[YELLOW]]{0}
 Unarmed.Skills.Berserk.Other.On=[[GREEN]]{0}[[DARK_GREEN]] har anv\u00e4nt [[RED]]B\u00e4rs\u00e4rk!
 Woodcutting.Ability.0=L\u00f6vbl\u00e5sare
 Woodcutting.Ability.1=Bl\u00e5s bort l\u00f6v
 Woodcutting.SkillName=TR\u00c4DHUGGNING
+Woodcutting.Skills.TreeFeller.Refresh=[[GREEN]Din [[YELLOW]]tr\u00e4df\u00e4llarkraft [[GREEN]]har vederkvickats!
+Woodcutting.Skills.TreeFeller.Other.Off=[[RED]]tr\u00e5df\u00e4llning[[GREEN]] har avklingat f\u00f6r [[YELLOW]]{0}
+Woodcutting.Skills.TreeFeller.Splinter=[[RED]]DIN YXA SPLITTRAS I TUSEN BITAR!
+Ability.Generic.Template.Lock=[[GRAY]]{0}
 Ability.Generic.Template=[[RED]]{0}: [[YELLOW]]{1}
+Combat.BeastLore=[[GREEN]]**MONSTERKUNSKAP**
+Combat.BeastLoreHealth=[[DARK_AQUA]]H\u00e4lsa ([[GREEN]]{0}[[DARK_AQUA]]/{1})
 Combat.TouchedFuzzy=[[DARK_RED]]R\u00f6rde luddigt. K\u00e4nde suddigt.
 Commands.AdminChat.Off=Admin chatt endast [[RED]]Av
+Commands.AdminToggle=[[RED]]- V\u00e4xla admin chat
 Commands.Disabled=[[RED]]Det h\u00e4r kommandot \u00e4r avst\u00e4ngt.
 Commands.DoesNotExist=[[RED]]Spelaren finns inte i databasen!
 Commands.Invite.Accepted=[[GREEN]]F\u00f6rfr\u00e5gan accepterad. Du har nu g\u00e5tt med i gruppen {0}
+Commands.mcgod=[[RED]]- V\u00e4xla till gudsl\u00e4ge
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - \u00c4ndra m\u00e5l
+Commands.ModDescription=[[RED]]- L\u00e4s sammanfattad mod beskrivning. 
 Commands.Party.Accept=[[RED]]- Acceptera gruppinbjudan
 Commands.Party.Invite.0=[[RED]]VARNING: [[GREEN]]Du har f\u00e5tt en gruppinbjudan till {0} fr\u00e5n {1}
 Commands.Party.Kick=[[RED]]Du blev kickad fr\u00e5n gruppen {0}!
 Commands.Party.Leave=[[RED]]Du har l\u00e4mnat gruppen
+Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO[[BLUE]] Kraftniv\u00e5[[YELLOW]]Leaderboard--
 Commands.PowerLevel=[[DARK_RED]]KRAFTNIV\u00c5: [[GREEN]]{0}
 Party.Player.Invalid=[[RED]]Det \u00e4r ingen giltlig spelare.
 Party.Teleport.Dead=[[RED]]Du kan inte teleportera dig till en d\u00f6d spelare.
@@ -50,10 +107,13 @@ Commands.XPGain.Mining=Hugger Sten & Mineraler
 Commands.XPGain.Swords=Attackerar Monster
 Commands.XPGain.Taming=Djurt\u00e4mjning, eller sl\u00e5ss m/ dina vargar
 Commands.XPGain=[[DARK_GRAY]]XP \u00d6KAT: [[WHITE]]{0}
+Commands.xprate.proper.0=[[RED]]Riktigt anv\u00e4ndande f\u00f6r att \u00e4ndra XP graden \u00e4r /xprate <integer> <true/false>
 XPRate.Event=[[GOLD]]mcMMO \u00e4r f\u00f6rnuvarande med i ett XP evenemang! XP f\u00f6rh\u00e5llandet ligger p\u00e5 {0}x!
 Effects.Effects=EFFEKTER
 Guides.Excavation=[DARK_AQUA]]Om Gr\u00e4vning:\n[[YELLOW]]Gr\u00e4vning \u00e4r n\u00e4r man gr\u00e4ver f\u00f6r att leta efter skatter.\n[[YELLOW]]Du hittar skatter genom att gr\u00e4va i marken.\n[[YELLOW]]Ju mer du g\u00f6r detta, desto fler skatter kommer du hitta.\n\n[[DARK_AQUA]]:XP \u00d6KNING\n[[YELLOW]]F\u00f6r att f\u00e5 XP m\u00e5ste du gr\u00e4va med en spade i din hand.\n[[YELLOW]]Man f\u00e5r bara XP av vissa material.\n[[DARK_AQUA]]Kompatibla Material:\n[[YELLOW]]Gr\u00e4s, Jord, Sand, Lera, Grus, Mycelium, Sj\u00e4lssand\n\n[[DARK_AQUA]]Hur du anv\u00e4nder Mega Gr\u00e4varen:\n[[YELLOW]]H\u00f6gerklicka med en spade i din hand.\n[[YELLOW]]N\u00e4r du har gjort det har du 4 sekunder p\u00e5 dig att\n[[YELLOW]]b\u00f6rja gr\u00e4va snabbt och aktivera\n[[YELLOW]] Mega Gr\u00e4varen.\n[[DARK_AQUA]]Vad \u00e4r Mega Gr\u00e4varen?\n[[YELLOW]]Mega Gr\u00e4varen \u00e4r en f\u00f6rm\u00e5ga med pauser\n[[YELLOW]]som \u00e4r till f\u00f6r Gr\u00e4vningsf\u00e4rdigheten\n[[YELLOW]]att hitta skatter och f\u00f6r att gr\u00e4va snabbare\n[[YELLOW]]p\u00e5 Gr\u00e4vningsmaterial\n\n[[DARK_AQUA]]Hur funkar Skatt Letare?\n[[YELLOW]]Varenda m\u00f6jliga skatt f\u00f6r Gr\u00e4vning kr\u00e4ver en viss\n[[YELLOW]]f\u00f6rm\u00e5gelevel  f\u00f6r att droppas, och som ett resultat \u00e4r det\n[[YELLOW]]sv\u00e5rt att s\u00e4ga hur mycket det hj\u00e4lper dig.\n[[YELLOW]]T\u00e4nk bara p\u00e5 att ju h\u00f6gre din Gr\u00e4vningsf\u00f6rm\u00e5ga\n[[YELLOW]]\u00e4r, desto fler skatter kan du hitta.\n[[YELLOW]]Kom ocks\u00e5 ih\u00e5g att varje gr\u00e4vnings-\n[[YELLOW]]kompatibelt material har en unik lista med olika skatter.\n[[YELLOW]]Det betyder att du kommer hitta andra saker i jord\n[[YELLOW]]\u00e4n vad du hittar i grus.\n[[DARK_AQUA]]Noteringar om Gr\u00e4vning:\n[[YELLOW]]Gr\u00e4vnings droppar \u00e4r helt anpassningsbara\n[[YELLOW]]S\u00e5 resultatet varierar fr\u00e5n server till server.
+Item.ChimaeraWing.Pass=**CHIMAERA VINGE**
 Item.Injured.Wait=Du blev skadad f\u00f6r en liten stund sedan och m\u00e5ste v\u00e4nta med att anv\u00e4nda den h\u00e4r skillen. [[YELLOW]]({0}s)
 Skills.Disarmed=[[DARK_RED]]Du har avv\u00e4pnats!
 Stats.Header.Combat=[[GOLD]]-=Stridsf\u00e4rdigheter=-
 Stats.Header.Gathering=[[GOLD]]-=SAMLA F\u00d6RM\u00c5GOR=-
+Stats.Header.Misc=[[GOLD]]-=Varierande F\u00e4rdogheter=-
