--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -116,7 +116,6 @@ Herbalism.Effect.0=Green Terra (SCHOPNOST)
 Herbalism.Effect.1=\u0160\u00ed\u0159en\u00ed planety, 3x v\u00edce drop\u016f
 Herbalism.Effect.2=Zahradnik (Wheat)
 Herbalism.Effect.3=Automaticky sazi plodiny pri sklizeni
-Herbalism.Effect.4=Zahradn\u00edk (Cobble/Stone Brick/Dirt)
 Herbalism.Effect.5=Zar\u016fst cihly mechem, nebo nebo nechat vyr\u016fst tr\u00e1vu
 Herbalism.Effect.6=Farm\u00e1\u0159\u016fv apetit
 Herbalism.Effect.7=Zvysuje obnovu hladu ze sklizenych jidel
@@ -228,7 +227,6 @@ Swords.Combat.Counter.Hit=[[DARK_RED]]Zasa\u017een proti\u00fatokem!
 Swords.Combat.Countered=[[GREEN]]**PROTIUTOK**
 Swords.Combat.SS.Struck=[[DARK_RED]]Zasazen Hrozivym utokem!
 Swords.Effect.0=Protiutok
-Swords.Effect.1=Odraz\u00ed {0} z\u00edskan\u00e9ho po\u0161kozen\u00ed
 Swords.Effect.2=Hrozivy utok (SCHOPNOST)
 Swords.Effect.3={0} Po\u0161kozen\u00ed \u00fatok do okol\u00ed, Krv\u00e1cen\u00ed+ \u00fatok do okol\u00ed
 Swords.Effect.4=Hrozivy utok krvaceni+
@@ -389,6 +387,7 @@ Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - Modify target
 Commands.mmoedit.AllSkills.1=[[GREEN]]Tv\u00e1 \u00farove\u0148 ve v\u0161ech skillech byla nastavena na {0}!
 Commands.mmoedit.Modified.1=[[GREEN]]Tv\u016fj skill v  {0} byl pozm\u011bn\u011bn na {1}!
 Commands.mmoedit.Modified.2=[[RED]]{0} bylo upraveno pro {1}.
+Commands.mmoshowdb=[[YELLOW]]Aktu\u00e1ln\u00ed pou\u017e\u00edvan\u00e1 datab\u00e1ze je [[GREEN]]{0}
 Commands.ModDescription=[[RED]]- Precti si strucny popis pluginu
 Commands.NoConsole=Tento prikaz nepodporuje pouziti z konzole.
 Commands.Notifications.Off=Oznamov\u00e1n\u00ed schopnost\u00ed [[RED]]vypnuto
@@ -559,9 +558,7 @@ Guides.Herbalism=[[DARK_AQUA]]O Herbalismu:\n[[YELLOW]]Herbalismus je o sb\u00ed
 Guides.Mining=[[DARK_AQUA]]O Miningu:\n[[YELLOW]]Mining spo\u010d\u00edv\u00e1 v t\u011b\u017een\u00ed kamenu a rud. Poskytuje bonusy\n[[YELLOW]]v po\u010dtu materi\u00e1lu, kter\u00fd vyt\u011b\u017e\u00edte.\n\n[[DARK_AQUA]]Z\u00edskan\u00ed XP:\n[[YELLOW]]Aby jste dostali XP, mus\u00edte m\u00edt v ruce krump\u00e1\u010d.\n[[YELLOW]]XP v\u00e1m d\u00e1vaj\u00ed jenom jist\u00e9 bloky.\n\n[[DARK_AQUA]]Kompatibiln\u00ed materi\u00e1ly:\n[[YELLOW]]Stone, Coal Ore, Iron Ore, Gold Ore, Diamond Ore, Redstone Ore,\n[[YELLOW]]Lapis Ore, Obsidian, Mossy Cobblestone, Ender Stone,\n[[YELLOW]]Glowstone, a Netherrack.\n\n\n[[DARK_AQUA]]Jak pou\u017e\u00edt Super Breaker:\n[[YELLOW]]Dr\u017ete v ruce krump\u00e1\u010d a stisknete prav\u00e9 tla\u010ditko na my\u0161i.\n[[YELLOW]]Vr\u00e1mci \u010dty\u0159 sekund m\u00fa\u017eete buchnout do bloku, kter\u00fd je naps\u00e1n\n[[YELLOW]]v kompatibiln\u00edch materi\u00e1lech, kter\u00e9 aktivujou\n[[YELLOW]]Super Breaker.\n\n[[DARK_AQUA]]Co je to Super Breaker?\n[[YELLOW]]Super Breaker je schopnost, kter\u00e1 trv\u00e1 podle toho,\n[[YELLOW]]jak\u00fd m\u00e1te skill. Ztrojn\u00e1sobuje va\u0161i \u0161anci na z\u00edskan\u00ed extra v\u011bc\u00ed\n[[YELLOW]]a t\u011b\u017e\u00edte bloky na jednu r\u00e1nu.\n\n[[DARK_AQUA]]Jak pou\u017e\u00edt Blast Mining:\n[[YELLOW]]Kdy\u017e m\u00e1te v ruce odpalova\u010d, kter\u00fdm je flint and steel ve vychoz\u00edm nastaven\u00ed,\n[[YELLOW]]klikn\u011bte prav\u00fdm tla\u010ditkem na my\u0161i na TNT, a to zp\u016fsob\u00ed,\n[[YELLOW]]\u017ee hned bouchne.\n\n[[DARK_AQUA]]Jak funguje Blast Mining?\n[[YELLOW]]Blast Mining je schopnost, kter\u00e1 trv\u00e1 podle toho, jak\u00fd m\u00e1te\n[[YELLOW]]skill. D\u00e1va bonusy kdy\u017e t\u011b\u017e\u00edte pou\u017eit\u00edm TNT a umo\u017e\u0148uje v\u00e1m\n[[YELLOW]]d\u00e1lkov\u011b odp\u00e1lit TNT. Blast mining m\u00e1 3 \u010d\u00e1sti.\n[[YELLOW]]Prvn\u00ed \u010d\u00e1st je Bigger Bombs, kter\u00e1 zv\u011bt\u0161uje oblast v\u00fdbuchu.\n[[YELLOW]]Druh\u00e1 \u010d\u00e1st je Demolitions Expert, kter\u00e1 zvy\u0161uje po\u0161kozen\u00ed\n[[YELLOW]]v\u00fdbuchem TNT. T\u0159et\u00ed \u010d\u00e1st prost\u011b zvy\u0161uje mno\u017estvi rud, kter\u00e9\n[[YELLOW]]z\u00edsk\u00e1te z TNT a zni\u017euje su\u0165,\n[[YELLOW]]kter\u00e1 padne.
 Guides.Page.Invalid=Nespr\u00e1vn\u00e9 \u010d\u00edslo str\u00e1nky!
 Guides.Page.OutOfRange=Tato str\u00e1nka neexistuje, je tu pouze {0} str\u00e1nek.
-Guides.Ranching=Ji\u017e brzy...
 Guides.Repair=[[DARK_AQUA]]Opravov\u00e1n\u00ed:\n[[YELLOW]]Oprava umo\u017e\u0148uje pou\u017e\u00edvat \u017eelezn\u00fd blok k oprav\u011b brn\u011bn\u00ed a\n[[YELLOW]]n\u00e1stroje, nebo zlat\u00fd blok, aby zachr\u00e1nil zbroj a n\u00e1stroje.\n\n[[DARK_AQUA]]XP ZISK:\n[[YELLOW]]Pro opravu n\u00e1stroj\u016f nebo brn\u011bn\u00ed se pou\u017e\u00edv\u00e1 mcMMO kovadlina.Je to\n[[YELLOW]]\u017eelezn\u00fd blok ve v\u00fdchoz\u00edm nastaven\u00ed a nem\u011bl by b\u00fdt zam\u011b\u0148ov\u00e1n s\n[[YELLOW]]the Vanilla Minecraft Anvil.\n[[DARK_AQUA]]Jak si m\u00e1m n\u011bco opravit?\n[[YELLOW]]Polo\u017e te mcMMO kovadlinu a prav\u00edm kliknut\u00edm na opravu polo\u017eky \n[[YELLOW]]kter\u00fd pr\u00e1v\u011b dr\u017e\u00ed\u0161.Spot\u0159ebuje to 1 polo\u017eku na ka\u017ed\u00e9 pou\u017eit\u00ed.\n\n[[DARK_AQUA]]Jak opravit Mastery v\u011bci?\n[[YELLOW]]Repair Mastery increases the repair amount. The extra amount\n[[YELLOW]]repaired is influenced by your Repair skill level.\n\n[[DARK_AQUA]]Jak funguje super opravov\u00e1n\u00ed?\n[[YELLOW]]Super Repair je pasivn\u00ed schopnost.P\u0159i oprav\u00e1ch polo\u017eky,\n[[YELLOW]] ud\u011bl\u00ed hr\u00e1\u010d\u016fm \u0161anci opravit polo\u017eku s\n[[YELLOW]]s dvojitou \u00fa\u010dinost\u00ed.\n\n\n\n\n[[DARK_AQUA]]Jak Arcane Forging funguje?\n[[YELLOW]]Tato pasivn\u00ed schopnost umo\u017e\u0148uje k oprav\u011b polo\u017eky s ur\u010ditou\n[[YELLOW]]\u0161ance na zachov\u00e1n\u00ed jejich kouzla. Tyto enchanty mohou b\u00fdt\n[[YELLOW]]zachov\u00e1ny, nebo sn\u00ed\u017eeny na ni\u017e\u0161\u00ed \u00farove\u0148,\n[[YELLOW]]nebo \u00fapln\u011b ztraceny.\n\n\n\n[[DARK_AQUA]]Jak funguje Salvage?\n[[YELLOW]]Polo\u017ete mcMMO kovadlinu a klikn\u011bte prav\u00fdm tla\u010d\u00edtkem my\u0161i na z\u00e1chranu\n[[YELLOW]]itemu kter\u00fd pr\u00e1v\u011b dr\u017e\u00ed\u0161.\n[[YELLOW]]This will break the item apart en give back the used ingots.\n[[YELLOW]]Pozn\u00e1mka:Je mo\u017en\u00e9 zachr\u00e1nit pouze pln\u011b opraven\u00e9 n\u00e1stroje nebo brn\u011bn\u00ed.
-Guides.Swords=[[DARK_AQUA]]O me\u010d\u00edch:\n[[YELLOW]]Tato dovednost ud\u011bluje bojov\u00e9 bonusy ka\u017ed\u00e9mu kter\u00fd bojuje\n[[YELLOW]]me\u010dem.\n\n[[DARK_AQUA]]Z\u00edsk\u00e1v\u00e1n\u00ed zku\u0161enostn\u00edch bod\u016f:\n[[YELLOW]]Zku\u0161enost\u00ed body jsou z\u00edsk\u00e1v\u00e1ny podle mno\u017estv\u00ed \u00fatoku kter\u00fd ud\u011bl\u00e1te monstr\u016fm nebo\n[[YELLOW]]jin\u00fdm hr\u00e1\u010d\u016fm kdy\u017e dr\u017e\u00edte me\u010d.\n\n[[DARK_AQUA]]Jak funguj\u00ed zoubkovan\u00e9 \u00fadery ?\n[[YELLOW]]Zoubkovan\u00e9 \u00fadery jsou aktivn\u00ed schopnost kterou m\u016f\u017eete aktivovat,kdy\u017e\n[[YELLOW]]budete klikat prav\u00e9 tla\u010d\u00edtko my\u0161i p\u0159i dr\u017een\u00ed me\u010de. Tato schopnost v\u00e1m umo\u017e\u0148uje d\u00e1t\n[[YELLOW]]\u00fatok do okol\u00ed.Tento \u00fatok do okol\u00ed d\u00e1 plus 25 procent \u00fatok k va\u0161emu norm\u00e1ln\u00edmu \u00fatoku\n[[YELLOW]] a zp\u016fsob\u00ed krv\u00e1cen\u00ed kter\u00e9 ud\u011bl\u00e1 po\u0161kozen\u00ed 5 kr\u00e1t a zmiz\u00ed.\n\n\n\n[[DARK_AQUA]]Jak funguje proti \u00fatok ?\n[[YELLOW]]Proti \u00fatok je pasivn\u00ed schopnost. Kdy\u017e do v\u00e1s ml\u00e1t\u00ed monstra,\n[[YELLOW]]budete m\u00edt \u0161anci odrazit 50 procent po\u0161kozen\u00ed kter\u00e9 jste\n[[YELLOW]]dostal.\n\n\n\n\n[[DARK_AQUA]]Jak funguje krv\u00e1cen\u00ed ?\n[[YELLOW]]Krv\u00e1cen\u00ed zp\u016fsobuje ,\u017ee nep\u0159\u00e1tel dost\u00e1v\u00e1j\u00ed zran\u011bn\u00ed ka\u017ed\u00e9 dv\u011b vte\u0159iny.\n[[YELLOW]]C\u00edl bude krv\u00e1cet dokud efekt nezmiz\u00ed nebo c\u00edl nezem\u0159e,\n[[YELLOW]]cokoliv p\u0159\u00edjde d\u0159\u00edv.\n[[YELLOW]]Trv\u00e1n\u00ed krv\u00e1cen\u00ed je zvy\u0161ov\u00e1no va\u0161\u00ed dovednost\u00ed s me\u010di.
 Guides.Smelting=Ji\u017e brzy...
 Guides.Taming=[[DARK_AQUA]]O ocho\u010dov\u00e1n\u00ed:\n[[YELLOW]]Ocho\u010dov\u00e1n\u00ed d\u00e1 hr\u00e1\u010d\u016fm r\u016fzn\u00e9 bojov\u00e9 bonusy ,kdy\u017e bude pou\u017e\u00edvat\n[[YELLOW]]ocho\u010den\u00e9 vlky.\n\n[[DARK_AQUA]]NAB\u00cdR\u00c1N\u00cd ZKU\u0160ENOST\u00cd:\n[[YELLOW]]Abyste z\u00edskali v t\u00e9to dovednosti zku\u0161enosti mus\u00edte ocho\u010dovat vlky/oceloty a nebo\n[[YELLOW]]se dost\u00e1vat do boje se sv\u00fdmi vlky.\n\n[[DARK_AQUA]]Jak funguje Vol\u00e1n\u00ed divo\u010diny ?\n[[YELLOW]]Vol\u00e1n\u00ed divo\u010diny je aktivn\u00ed schopnost kter\u00e1 p\u0159ivol\u00e1\n[[YELLOW]]vlka nebo ocelota ,aby bojovali s v\u00e1mi. M\u016f\u017eete to ud\u011blat pomoc\u00ed\n[[YELLOW]]klik\u00e1n\u00ed lev\u00fdm p\u0159i dr\u017een\u00ed kost\u00ed nebo ryb.\n\n[[DARK_AQUA]]Jak funguje P\u0159\u00edb\u011bh \u0161elmy ?\n[[YELLOW]]P\u0159\u00edb\u011bh \u0161elmy umo\u017e\u0148uje hr\u00e1\u010d\u016fm prozkoumat mazl\u00ed\u010dky a zkontrolovat statistiky\n[[YELLOW]]vlk\u016f a ocelot\u016f.Klikn\u011bte lev\u00fdm na vlka nebo ocelota pro aktivaci \n[[YELLOW]]P\u0159\u00edb\u011bhu \u0161elmy.\n[[DARK_AQUA]]Jak funguje Masakr?\n[[YELLOW]] Masakr je pasivn\u00ed schopnost kter\u00e1 m\u00e1 \u0161anci na zp\u016fsoben\u00ed\n[[YELLOW]]krv\u00e1civ\u00e9ho efektu na c\u00edle va\u0161eho vlka.\n\n[[DARK_AQUA]]Jak funguj\u00ed Naost\u0159en\u00e9 dr\u00e1py?\n[[YELLOW]]Naost\u0159en\u00e9 dr\u00e1py poskytuj\u00ed bonusov\u00fd \u00fatok pro \u00fatok zp\u016fsoben\u00fd\n[[YELLOW]]vlky.Bonusov\u00fd \u00fatok z\u00e1le\u017e\u00ed na \u00farovni va\u0161eho ocho\u010dov\u00e1n\u00ed.\n\n[[DARK_AQUA]]Jak funguje V\u011bdom\u00ed o okol\u00ed?\n[[YELLOW]]Tato pasivn\u00ed schopnost umo\u017en\u00ed vlk\u016fm ,aby se k v\u00e1m teleportovali ,kdy\u017e\n[[YELLOW]]se dostanou bl\u00edzko ohro\u017een\u00ed ,jako t\u0159eba kaktus\u016f nebo l\u00e1vy.Tak\u00e9 d\u00e1 vlk\u016fm\n[[YELLOW]]imunity v\u016f\u010di zran\u011bn\u00edm z p\u00e1d\u016f.\n\n[[DARK_AQUA]]Jak funguje Tuh\u00e1 k\u016f\u017ee ?\n[[YELLOW]]Tato pasivn\u00ed schopnost sn\u00ed\u017e\u00ed \u00fatok a u\u010din\u00ed vlky\n[[YELLOW]]ohn\u011bvzdorn\u00e9.\n[[DARK_AQUA]]Jak funguje Ot\u0159esuvzdornost?\n[[YELLOW]]Tato pasivn\u00ed schopnost sni\u017euje vlk\u016fm po\u0161kozen\u00ed z \n[[YELLOW]]exploz\u00ed.\n[[DARK_AQUA]]Jak funguje Rychl\u00e9 ob\u010derstven\u00ed?\n[[YELLOW]]Tato pasivn\u00ed schopnost d\u00e1v\u00e1 vlk\u016fm \u0161anci vyl\u00e9\u010dit se kdykoliv\n[[YELLOW]]za\u00fato\u010d\u00ed.
 Guides.Unarmed=[[DARK_AQUA]]O boji bezezbran\u011b:\n[[YELLOW]]Boj bezezbran\u011b d\u00e1v\u00e1 hr\u00e1\u010d\u016fm r\u016fzn\u00e9 bojov\u00e9 bonusy ,kdy\u017e pou\u017e\u00edvaj\u00ed\n[[YELLOW]]sv\u00e9 p\u011bsti jako zbran\u011b.\n\n[[DARK_AQUA]]NAB\u00cdR\u00c1N\u00cd ZKU\u0160ENOST\u00cd:\n[[YELLOW]]Zku\u0161enosti z\u00edsk\u00e1v\u00e1te podle po\u010dtu zran\u011bn\u00ed ,kter\u00e9 zp\u016fsob\u00edte potvor\u00e1m\n[[YELLOW]]nebo jin\u00fdm hr\u00e1\u010d\u016fm ,kdy\u017e jste neozbrojen\u00ed.\n\n[[DARK_AQUA]]Jak funguje Nep\u0159\u00ed\u010detnost?\n[[YELLOW]]Nep\u0159\u00ed\u010detnost je aktivn\u00ed schopnost zap\u00ednateln\u00e1 prav\u00fdm tla\u010d\u00edtkem ,kdy\u017e jste bezezbran\u011b\n[[YELLOW]]kdy\u017e jste bezezbran\u011b.Kdy\u017e jste v nep\u0159\u00ed\u010detn\u00e9m m\u00f3du,zp\u016fsobujete o 50 procent v\u00edc\n[[YELLOW]]zran\u011bn\u00ed a m\u016f\u017eete zni\u010dit slab\u00e9 materi\u00e1ly okam\u017eit\u011b ,jako t\u0159eba\n[[YELLOW]]Hl\u00edna a Tr\u00e1va.\n[[DARK_AQUA]]Jak funguje \u017delezn\u00e1 pa\u017ee?\n[[YELLOW]]\u017delezn\u00e1 pa\u017ee zvy\u0161uje zp\u016fsoben\u00e9 po\u0161kozen\u00ed ,kdy\u017e zasahujete zr\u016fdy nebo \n[[YELLOW]]hr\u00e1\u010de sv\u00fdmi p\u011bstmi.\n[[DARK_AQUA]]Jak funguje Odr\u00e1\u017een\u00ed \u0161\u00edp\u016f?\n[[YELLOW]]Odr\u00e1\u017een\u00ed \u0161\u00edp\u016f je pasivn\u00ed schopnost ,kter\u00e1 v\u00e1m d\u00e1v\u00e1 \u0161anci\n[[YELLOW]]odrazit \u0161\u00edpy vyst\u0159elen\u00e9 kostlivci nebo jin\u00fdmi hr\u00e1\u010di.\n[[YELLOW]]\u0160\u00edp spadne ne\u0161kodn\u011b na zem.\n\n[[DARK_AQUA]]Jak funguje \u017delezn\u00fd stisk?\n[[YELLOW]]\u017delezn\u00fd stisk je pasivn\u00ed schopnost ,kter\u00e1 vykr\u00fdv\u00e1 odzbrojen\u00ed.Jak se va\u0161e \u00farove\u0148\n[[YELLOW]]boje beze zbran\u011b zvy\u0161uje,\u0161ance na zabr\u00e1n\u011bn\u00ed odzbrojen\u00ed se rovn\u011b\u017e zvy\u0161uje.\n[[DARK_AQUA]]Jak funguje Odzbrojen\u00ed?\n[[YELLOW]]Tato pasivn\u00ed schopnost umo\u017e\u0148uje hr\u00e1\u010d\u016fm odzbrojit jin\u00e9 hr\u00e1\u010de,\n[[YELLOW]]co\u017e zp\u016fsob\u00ed ,\u017ee jim p\u0159edm\u011bt z jejich ruky spadne na zem.
@@ -608,11 +605,7 @@ Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] byl p\u0159\u00ed
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]Z\u00edskal jsi [[BLUE]]{0}[[DARK_AQUA]] level\u016f od [[YELLOW]]{1}.
 Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] nebyl schopen od tebe ukr\u00e1st v\u011bdomosti!
 Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]]  ti ukradl [[BLUE]]{1}[[DARK_RED]] \u00farovn\u00ed!
-Hardcore.Disabled=[[GOLD]][mcMMO] Hardcore m\u00f3d vypnut.
-Hardcore.Enabled=[[GOLD]][mcMMO] Hardcore m\u00f3d zapnut.
 Hardcore.PercentageChanged=[[GOLD]][mcMMO] Procentu\u00e1lnost ztr\u00e1cen\u00ed stat\u016f byla zm\u011bn\u011bna na {0}.
-Vampirism.Disabled=[[GOLD]][mcMMO] Up\u00edrsk\u00fd m\u00f3d vypnut.
-Vampirism.Enabled=[[GOLD]][mcMMO] Up\u00edrsk\u00fd m\u00f3d zapnut.
 Vampirism.PercentageChanged=[[GOLD]][mcMMO] Procentu\u00e1lnost odcizen\u00ed stat\u016f byla zm\u011bn\u011bna na {0}.
 Spout.Donate=[[YELLOW]][mcMMO] P\u0159isp\u011bjte!
 Spout.LevelUp.1=[GREEN]]Nov\u00fd level!
@@ -648,27 +641,6 @@ Smelting.Effect.7=\u0160ance aby byla ruda instant\u011b ztavena p\u0159i t\u011
 Smelting.FluxMining.Success=[[GREEN]]Ta ruda se sama ztavila!
 Smelting.Listener=Taven\u00ed:
 Smelting.SkillName=TAVEN\u00cd
-Ranching.Ability.MultipleBirth=[[RED]]\u0160ance na n\u011bkolikan\u00e1sobn\u00e9 narozen\u00ed: [[YELLOW]]{0}
-Ranching.Ability.MasterHerder=[[RED]]Sn\u00ed\u017een\u00e1 doba obnoven\u00ed: [[YELLOW]]{0}
-Ranching.Ability.ShearsMastery=[[RED]]\u0160ance na hol\u00edc\u00ed mistrnost: [[YELLOW]]{0}
-Ranching.Ability.ArtisanButcher=[[RED]]\u0160ance \u0159emesln\u00edka \u0159ezn\u00edka: [[YELLOW]]{0}
-Ranching.Ability.CarnivoresDiet=[[RED]]Maso\u017eravcova dieta: [[YELLOW]]Rank {0}
-Ranching.Ability.Locked.0=UZAM\u010cENO DOKU\u010e {0}+ DOVEDNOST (N\u011aKOLIKAN\u00c1SOBN\u00c9 NAROZEN\u00cd)
-Ranching.Ability.Locked.1=UZAM\u010cENO DOKU\u010e {0}+ DOVEDNOST (MISTR PAS\u00c1K)
-Ranching.Effect.0=N\u011bkolikan\u00e1sobn\u00e9 Narozen\u00ed
-Ranching.Effect.1=\u0160ance ,aby zv\u00ed\u0159ata m\u011bla dvoj\u010data
-Ranching.Effect.2=Mistr pas\u00e1k
-Ranching.Effect.3=Sni\u017euje dobu \u010dek\u00e1n\u00ed mezi rozmno\u017eov\u00e1n\u00edm
-Ranching.Effect.4=Zv\u00fd\u0161en\u00ed z\u00e1kladn\u00edch zku\u0161enost\u00ed
-Ranching.Effect.5=Zvy\u0161uje po\u010det zku\u0161enost\u00ed z\u00edskan\u00fdch p\u0159i rozmno\u017eov\u00e1n\u00ed zv\u00ed\u0159at
-Ranching.Effect.6=Hol\u00edc\u00ed mistrnost
-Ranching.Effect.7=D\u00e1v\u00e1 \u0161anci k z\u00edsk\u00e1n\u00ed v\u00edce vlny
-Ranching.Effect.8=\u0158emesln\u00edk \u0158ezn\u00edk
-Ranching.Effect.9=D\u00e1v\u00e1 \u0161anci obrat v\u00edce masa
-Ranching.Effect.10=Maso\u017eravcova dieta
-Ranching.Effect.11=Zvy\u0161uje obnovu hladu z masa
-Ranching.Listener=Farma\u0159en\u00ed:
-Ranching.SkillName=FARMA\u0158EN\u00cd
 Commands.Description.addlevels=P\u0159id\u00e1v\u00e1 u\u017eivatelsk\u00e9 mcMMO \u00farovn\u011b
 Commands.Description.adminchat=Zap\u00edn\u00e1/vyp\u00edn\u00e1 mcMMO administr\u00e1torsk\u00fd chat nebo odes\u00edl\u00e1 administr\u00e1torsk\u00e9 chatov\u00e9 zpr\u00e1vy
 Commands.Description.addxp=P\u0159id\u00e1 u\u017eivateli mcMMO XP
@@ -686,6 +658,8 @@ Commands.Description.mcremove=Odstranit u\u017eivatele z datab\u00e1ze mcMMO
 Commands.Description.mcstats=Zobraz\u00ed tv\u00e9 mcMMO \u00farovn\u011b a XP
 Commands.Description.mctop=Zobraz\u00ed mcMMO \u017eeb\u0159\u00ed\u010dky
 Commands.Description.mmoedit=Upravuje u\u017eivatelsk\u00e9 mcMMO \u00farovn\u011b
+Commands.Description.mmoupdate=P\u0159esouv\u00e1n\u00ed mcMMO datab\u00e1ze ze star\u00e9 do datab\u00e1ze nov\u00e9
+Commands.Description.mmoshowdb=Zobraz\u00ed n\u00e1zev aktu\u00e1ln\u00ed datab\u00e1ze (p\u0159\u00ed\u0161t\u011b pou\u017e\u00edjte /mmoupdate)
 Commands.Description.party=Nastavuje r\u016fzn\u00e9 mcMMO nastaven\u00ed party
 Commands.Description.partychat=Zap\u00edn\u00e1/vyp\u00edn\u00e1 mcMMO chat party nebo odes\u00edl\u00e1 chatov\u00e9 zpr\u00e1vy
 Commands.Description.ptp=Teleport k mcMMO clenovi party
@@ -696,3 +670,10 @@ Commands.Description.xplock=Nastav\u00ed tv\u016fj mcMMO XP bar na konkr\u00e9tn
 Commands.Description.xprate=Upravuje mcMMO XP n\u00e1sobek nebo spou\u0161t\u00ed mcMMO XP ud\u00e1lost
 UpdateChecker.outdated=Pou\u017e\u00edv\u00e1\u0161 zastaralou verzi mcMMO!
 UpdateChecker.newavailable=Nov\u00e1 verze dostupn\u00e1 na BukkitDevu.
+Scoreboard.Header.PlayerStats=mcMMO Staty
+Scoreboard.Header.PlayerRank=mcMMO Ranky
+Scoreboard.Header.PlayerInspect=mcMMO Staty:
+Scoreboard.Misc.Level=Level
+Scoreboard.Misc.CurrentXP=Aktualn\u00ed XP
+Scoreboard.Misc.RemainingXP=Zb\u00fdvaj\u00edc\u00ed XP
+Scoreboard.Misc.Overall=Celkov\u011b
