--- a/src/main/resources/locale/locale_fi.properties
+++ b/src/main/resources/locale/locale_fi.properties
@@ -1,28 +1,79 @@
 Acrobatics.Combat.Proc=[[GREEN]]**V\u00e4ist\u00f6liike**
+Acrobatics.Listener=Akrobatia:
 Acrobatics.SkillName=AKROBATIA
 Acrobatics.Skillup=[[YELLOW]]Akrobatian taito nousi {0} tasolla. Kokonaism\u00e4\u00e4r\u00e4 ({1})
 Archery.Skillup=[[YELLOW]]Jousiammuntataito kehittyi {0} tasoa. Kokonaistaso: ({1})
 Axes.Combat.GI.Struck=[[RED]]**OSUNUT SUUREMMALLA VOIMALLA**
+Axes.Combat.SS.Length=[[RED]]Kallon Halkaisun Pituus: [[YELLOW]]{0}s
+Axes.Effect.3=Kaksinkertainen Vahinko
+Axes.Effect.5=Lis\u00e4\u00e4 vahinkoa
+Axes.Skills.SS.On=[[GREEN]]**Kallonhalkaisija AKTIVOITU**
+Axes.Skills.SS.Refresh=[[GREEN]]Sinun[[YELLOW]]Kallonhalkaisu [[GREEN]]taito on latautunut!
 Axes.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] on k\u00e4ytt\u00e4nyt [[RED]] Kallonhalkaisijaa!
+Axes.Skillup=[[YELLOW]]Akrobatian taito nousi {0} tasolla. Kokonaism\u00e4\u00e4r\u00e4 ({1})
+Excavation.Listener=Kaivuu:
 Excavation.SkillName=KAIVANTO
+Excavation.Skills.GigaDrillBreaker.On=[[GREEN]]**TEHO PORA HAJOITUS AKTIVOITU**
+Excavation.Skillup=[[YELLOW]]Kaivuu taito nousi  {0} tasolla. Kokonaism\u00e4\u00e4r\u00e4 ({1})
 Fishing.ItemFound=[[GRAY]]Treasure found!
 Fishing.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
+Herbalism.Ability.GTh=[[GREEN]]**VIHERPEUKALO**
 Herbalism.Listener=Yrttitietous:
+Herbalism.Skills.GTe.Refresh=[[GREEN]]Sinun [[YELLOW]]Viherpeukalo [[GREEN]]taito on latautunut!
+Herbalism.Skills.GTe.Other.Off=[[RED]]Viherpaukalo taito[[GREEN]] kului loppuun ajaksi [[YELLOW]]{0}
+Mining.Ability.Length=[[RED]]Teho Hajoituksen Pituus: [[YELLOW]]{0}s
+Mining.Ability.Lower=[[GRAY]]**LASKIT HAKKUSI**
 Mining.Ability.Ready=[[GREEN]]**VALMISTAUDUT ISKEM\u00c4\u00c4N HAKULLASI**
+Mining.Listener=Louhinta:
+Mining.Skills.SuperBreaker.Other.Off=[[RED]]Tehostettu hajoitus[[GREEN]] kului loppuun ajaksi [[YELLOW]]{0}
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]Sinun [[YELLOW]Superrikkomis [[GREEN]]-taito on uudelleenlatautunut!
 Mining.Skillup=[[YELLOW]]Louhimistaito kasvoi {0} tasolla. Kokonaism\u00e4\u00e4r\u00e4 ({1})
+Mining.Blast.Radius.Increase=[[RED]]R\u00e4j\u00e4ytys Et\u00e4isyys Nousi: [[YELLOW]]+{0}
 Mining.Blast.Refresh=[[GREEN]]Sinun [[YELLOW] R\u00e4j\u00e4ht\u00e4v\u00e4 Kaivuu [[GREEN]]-kyky on uudelleenlatautunut!
+Repair.Effect.0=Korjaus
+Repair.Effect.2=Korjaus Mestaruus
+Repair.Effect.3=Korotettu korjaus taso
+Repair.Effect.4=Tehostettu Korjaus
+Repair.Effect.5=Kaksinkertainen tehokkuus
+Repair.Effect.6=Timantti Korjaus ({0}+ TAITO)
+Repair.Effect.7=Korjaa Timantti ty\u00f6kaluja & haarniskoita
+Repair.Effect.8=Mystinen Korjaus
+Repair.Effect.9=Korjaa lumottuja esineit\u00e4
 Repair.Listener.Anvil=[[DARK_RED]]Olet asettanut alasimen paikalleen, voit korjata ty\u00f6kalusi ja haarniskasi sill\u00e4.
+Repair.Listener=Korjaus:
+Repair.SkillName=KORJAA
+Repair.Skills.AdeptDiamond=[[DARK_RED]]Et ole tarpeeksi taitava korjataksesi timanttia.
 Repair.Skills.AdeptGold=[[DARK_RED]]Et ole tarpeeksi taitava korjataksesi kultaa.
+Repair.Skillup=[[YELLOW]]Korjaustaito kasvoi {0} tasolla. Kokonaism\u00e4\u00e4r\u00e4 ({1})
+Repair.Arcane.Chance.Downgrade=[[GRAY]]Mystisen Korjauksen huononnus mahdollisuus: [[YELLOW]]{0}%
+Repair.Arcane.Chance.Success=[[GRAY]]Mystisen Taonnan Onnistumisprosentti: [[YELLOW]]{0}%
 Repair.Arcane.Fail=[[RED]]Taikavoima on h\u00e4ipynyt esineest\u00e4 pysyv\u00e4sti.
+Repair.Arcane.Lost=[[RED]]Et ollut tarpeeksi taitava pit\u00e4\u00e4ksesi lumouksia.
+Swords.Ability.Lower=[[GRAY]]**LASKIT MIEKKASI**
+Swords.Ability.Ready=[[GREEN]]**VALMISTAUDUT ISKEM\u00c4\u00c4N MIEKALLASI**
 Swords.Combat.Bleeding.Stopped=[[GRAY]]Verenvuodatus on [[GREEN]]loppunut[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**Vihollinen vuotaa verta**
+Swords.Combat.Countered=[[GREEN]]**VASTAISKU**
+Swords.Combat.SS.Struck=[[DARK_RED]]Sinua iskettiin SAHALAITA ISKULLA!
+Swords.Listener=Miekkailu:
 Swords.Skills.SS.On=[[GREEN]]**SAHALAITAISET ISKUT AKTIVOITU**
+Swords.Skills.SS.Other.Off=[[RED]]Sahalaita Isku[[GREEN]] kului loppuun ajaksi [[YELLOW]]{0}
+Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] on k\u00e4ytt\u00e4nyt [[RED]]Sahalaita iskua!
+Taming.Ability.Bonus.2=Paksu Turkki
+Taming.Effect.10=Shokin Kest\u00e4v\u00e4
+Taming.Listener.Wolf=[[DARK_GRAY]]Sutesi kipitt\u00e4\u00e4 takaisin luoksesi...
+Taming.Skillup=[[YELLOW]]Kesytys taito nousi {0} tasolla. Kokonaism\u00e4\u00e4r\u00e4 ({1})
+Unarmed.Ability.Berserk.Length=[[RED]]Sekop\u00e4\u00e4n Pituus: [[YELLOW]]{0}s
+Unarmed.Listener=Aseeton:
 Unarmed.Skills.Berserk.Off=[[RED]]**Berserkki on deaktivoitunut**
+Unarmed.Skills.Berserk.Other.Off=[[RED]]Sekop\u00e4\u00e4[[GREEN]] kului loppuun ajaksi [[YELLOW]]{0}
 Unarmed.Skills.Berserk.Other.On=[[GREEN]]{0}[[DARK_GREEN]] on k\u00e4ytt\u00e4nyt [[RED]]berserkki\u00e4!
 Woodcutting.Ability.0=Lehtipuhallin
 Woodcutting.Ability.1=Puhaltaa lehti\u00e4 pois
 Woodcutting.SkillName=Puunhakkuu
+Woodcutting.Skills.TreeFeller.Refresh=[[GREEN]]Sinun [[YELLOW]]Puunhakkuu [[GREEN]]taito on latautunut!
+Woodcutting.Skills.TreeFeller.Other.Off=[[RED]]Puunhakkuu[[GREEN]] kului loppuun ajaksi [[YELLOW]]{0}
+Woodcutting.Skills.TreeFeller.Splinter=[[RED]]SINUN KIRVES HAJOSI TUHANSIIN OSIIN!
 Combat.ArrowDeflect=[[WHITE]]**NUOLI TORJUTTU**
 Combat.BeastLore=[[GREEN]]**BEAST LORE**
 Combat.BeastLoreHealth=[[DARK_AQUA]]Health ([[GREEN]]{0}[[DARK_AQUA]]/{1})
@@ -32,31 +83,48 @@ Combat.StruckByGore=[[RED]]**SINUA ON PISTETTY**
 Combat.TargetDazed=Kohde [[DARK_RED]]tyrm\u00e4tty
 Combat.TouchedFuzzy=[[DARK_RED]]T\u00f6kk\u00e4sit P\u00f6rr\u00f6\u00e4. Tunsit huimauksen.
 Commands.AdminChat.Off=Ainoastaan Yll\u00e4pit\u00e4jien keskustelu [[RED]]pois p\u00e4\u00e4lt\u00e4
+Commands.Disabled=[[RED]]T\u00e4m\u00e4 komento ei ole k\u00e4ytett\u00e4viss\u00e4.
 Commands.DoesNotExist=[[RED]]Player does not exist in the database!
+Commands.Invite.Accepted=[[GREEN]]Kutsu hyv\u00e4ksytty. Liityit ryhm\u00e4\u00e4n {0}
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - Muokkaa kohdetta
 Commands.NoConsole=This command does not support console usage.
+Commands.Party.Accept=[[RED]]- Hyv\u00e4ksy kutsu ryhm\u00e4\u00e4n
+Commands.Party.Invite.0=[[RED]]HUOMIO: [[GREEN]]Sait kutsun ryhm\u00e4\u00e4n {0} pelaajalta {1}
 Commands.Party.Kick=[[RED]]Sinut on potkittu ryhm\u00e4st\u00e4 {0}!
+Commands.Party.Leave=[[RED]]Sin\u00e4 l\u00e4hdit ryhm\u00e4st\u00e4
+Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO[[BLUE]] Voimataso [[YELLOW]]Leaderboard--
 Commands.PowerLevel=[[DARK_RED]]Voimataso: [[GREEN]]{0}
 Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
 Party.Locked=[[RED]]Party is locked, only party leader may invite.
 Party.NotInYourParty=[[DARK_RED]]{0} is not in your party
 Party.Password.Set=[[GREEN]]Party password set to {0}
+Party.Player.Invalid=[[RED]]Tuo ei ole kelvollinen pelaaja.
+Party.Teleport.Dead=[[RED]]Et voi teleportata kuolleeseen pelaajaan.
+Party.Teleport.Target=[[GREEN]]{0} teleporttasi luoksesi.
 Party.Unlocked=[[GRAY]]Party is unlocked
 Commands.XPGain.Excavation=Kaivaminen ja aarteidenl\u00f6yt\u00e4minen
+Commands.XPGain.Fishing=Kalastus
 Commands.XPGain.Herbalism=Yrttien sadonkorjuu
-Commands.XPGain.Mining=Kiven ja malmin kaivaminen
+Commands.XPGain.Mining=Kiven ja malmin louhinta
+Commands.XPGain.Swords=Hy\u00f6kk\u00e4\u00e4vi\u00e4 Hirvi\u00f6it\u00e4
 Commands.XPGain.Taming=El\u00e4inten kesytt\u00e4minen tai taisteleminen susiesi kanssa.
+Commands.XPGain=[[DARK_GRAY]]XP SAATAVUUS: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Your XP BAR is now locked to {0}!
 Commands.xplock.unlocked=[[GOLD]]Your XP BAR is now [[GREEN]]UNLOCKED[[GOLD]]!
 Commands.xprate.over=[[RED]]mcMMO XP Rate Event is OVER!!
 XPRate.Event=[[GOLD]]mcMMO is currently in an XP rate event! XP rate is {0}x!
+Effects.Effects=TEHOSTEET
 Guides.Axes=Guide coming soon...
 Guides.Excavation=[[DARK_AQUA]]About Excavation:\n[[YELLOW]]Excavation is the act of digging up dirt to find treasures.\n[[YELLOW]]By excavating the land you will find treasures.\n[[YELLOW]]The more you do this the more treasures you can find.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill you must dig with a shovel in hand.\n[[YELLOW]]Only certain materials can be dug up for treasures and XP.\n[[DARK_AQUA]]Compatible Materials:\n[[YELLOW]]Grass, Dirt, Sand, Clay, Gravel, Mycelium, Soul Sand\n\n[[DARK_AQUA]]How to use Giga Drill Breaker:\n[[YELLOW]]With a shovel in hand right click to ready your tool.\n[[YELLOW]]Once in this state you have about 4 seconds to make\n[[YELLOW]]contact with Excavation compatible materials this will\n[[YELLOW]]activate Giga Drill Breaker.\n[[DARK_AQUA]]What is Giga Drill Breaker?\n[[YELLOW]]Giga Drill Breaker is an ability with a cooldown\n[[YELLOW]]tied to Excavation skill. It triples your chance\n[[YELLOW]]of finding treasures and enables instant break\n[[YELLOW]]on Excavation materials.\n\n[[DARK_AQUA]]How does Treasure Hunter work?\n[[YELLOW]]Every possible treasure for Excavation has its own\n[[YELLOW]]skill level requirement for it to drop, as a result it\'s\n[[YELLOW]]difficult to say how much it is helping you.\n[[YELLOW]]Just keep in mind that the higher your Excavation skill\n[[YELLOW]]is, the more treasures that can be found.\n[[YELLOW]]And also keep in mind that each type of Excavation\n[[YELLOW]]compatible material has its own unique list of treasures.\n[[YELLOW]]In other words you will find different treasures in Dirt\n[[YELLOW]]than you would in Gravel.\n[[DARK_AQUA]]Notes about Excavation:\n[[YELLOW]]Excavation drops are completely customizeable\n[[YELLOW]]So results vary server to server.
 Guides.Mining=[[DARK_AQUA]]About Mining:\n[[YELLOW]]Mining consists of mining stone and ores. It provides bonuses\n[[YELLOW]]to the amount of materials dropped while mining.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill, you must mine with a pickaxe in hand.\n[[YELLOW]]Only certain blocks award XP.\n\n[[DARK_AQUA]]Compatible Materials:\n[[YELLOW]]Stone, Coal Ore, Iron Ore, Gold Ore, Diamond Ore, Redstone Ore,\n[[YELLOW]]Lapis Ore, Obsidian, Mossy Cobblestone, Ender Stone,\n[[YELLOW]]Glowstone, and Netherrack.\n\n[[DARK_AQUA]]How to use Super Breaker:\n[[YELLOW]]With a pickaxe in your hand, right click to ready your tool.\n[[YELLOW]]Once in this state, you have about 4 seconds to make contact\n[[YELLOW]]with Mining compatible materials, which will activate Super\n[[YELLOW]]Breaker.\n\n[[DARK_AQUA]]What is Super Breaker?\n[[YELLOW]]Super Breaker is an ability with a cooldown tied to the Mining\n[[YELLOW]]skill. It triples your chance of extra items dropping and\n[[YELLOW]]enables instant break on Mining materials.\n\n[[DARK_AQUA]]How to use Blast Mining:\n[[YELLOW]]With a detonator in hand, which is a flint & steel by default,\n[[YELLOW]]right-click on TNT from a distance. This will cause the TNT\n[[YELLOW]]to instantly explode.\n\n[[DARK_AQUA]]How does Blast Mining work?\n[[YELLOW]]Blast Mining is an ability with a cooldown tied to the Mining\n[[YELLOW]]skill. It gives bonuses when mining with TNT and allows you\n[[YELLOW]]to remote detonate TNT. There are three parts to Blast Mining.\n[[YELLOW]]The first part is Bigger Bombs, which increases blast radius.\n[[YELLOW]]The second is Demolitions Expert, which decreases damage\n[[YELLOW]]from TNT explosions. The third part simply increases the\n[[YELLOW]]amount of ores dropped from TNT and decreases the\n[[YELLOW]]debris dropped.
 Inspect.OfflineStats=mcMMO Stats for Offline Player [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]mcMMO Stats for [[YELLOW]]{0}
 Inspect.TooFar=[[RED]]You are too far away to inspect that player!
+Item.ChimaeraWing.Pass=**SILLIKUNINGAS SIIPI**
+Item.Injured.Wait=Loukkaannuit \u00e4skett\u00e4in ja sinun tulee odottaa hetki. [[YELLOW]]({0}s)
 Skills.Disarmed=[[DARK_RED]]Sinut on riisuttu aseista!
 Skills.TooTired=[[RED]]You are too tired to use that ability again.
 Stats.Header.Combat=[[GOLD]]-=TAISTELUTAIDOT=-
 Stats.Header.Gathering=[[GOLD]]-=Resurssinkeruutaidot=-
+Stats.Header.Misc=[[GOLD]]-=SEKALAISET TAIDOT=-
+Stats.Own.Stats=[[GREEN]][mcMMO] Tilastot
