--- a/src/main/resources/locale/locale_ja_JP.properties
+++ b/src/main/resources/locale/locale_ja_JP.properties
@@ -3,21 +3,27 @@ Acrobatics.Listener=\u30a2\u30af\u30ed\u30d0\u30c6\u30a3\u30c3\u30af:
 Acrobatics.SkillName=\u30a2\u30af\u30ed\u30d0\u30c3\u30c8
 Acrobatics.Skillup=[[YELLOW]\u30de\u30a4\u30cb\u30f3\u30b0\u304c{0}\u4e0a\u6607\u3057\u305f\u3002\u5408\u8a08\uff08{1}\uff09
 Archery.Listener=\u5f13\u77e2:
-Archery.Skillup=[[YELLOW]\u30de\u30a4\u30cb\u30f3\u30b0\u30b9\u30ad\u30eb\u304c{0}\u4e0a\u6607\u3057\u305f\u3002\u5408\u8a08\uff08{1}\uff09
+Archery.Skillup=[[YELLOW]\u30de\u30a4\u30cb\u30f3\u30b0\u304c{0}\u4e0a\u6607\u3057\u305f\u3002\u5408\u8a08\uff08{1}\uff09
+Axes.Combat.SS.Length=[[RED]]\u30b9\u30fc\u30d1\u30fc\u30d6\u30ec\u30a4\u30ab\u30fc\u306e\u767a\u52d5\u6642\u9593: [[YELLOW]]{0}\u79d2
 Axes.Effect.3=\u30c0\u30d6\u30eb\u30c0\u30e1\u30fc\u30b8
 Axes.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] \u306f [[RED]]\u30b9\u30ab\u30eb\u30b9\u30d7\u30ea\u30c3\u30bf\u30fc[[DARK_GREEN]]\u3092\u4f7f\u7528\u3057\u305f\uff01
 Axes.Skillup=[[YELLOW]\u65a7\u30b9\u30ad\u30eb\u306f{0}\u306e\u5897\u52a0\u3068\u306a\u308a\u307e\u3057\u305f\u3002\u5408\u8a08\uff08{1}\uff09
+Excavation.Listener=\u767a\u6398
 Excavation.SkillName=\u767a\u6398
+Excavation.Skillup=[[YELLOW]\u30de\u30a4\u30cb\u30f3\u30b0\u30b9\u30ad\u30eb{0}\u306f\u5897\u3048\u305f\u3002\u5408\u8a08\uff08{1}\uff09
 Fishing.Effect.10=\u30a2\u30a4\u30b9\u30d5\u30a3\u30c3\u30b7\u30f3\u30b0
 Herbalism.Listener=\u85ac\u8349\u5b66\uff1a
+Herbalism.Skills.GTe.Off=[[RED]]\u304d\u3053\u308a[[GREEN]]\u30b9\u30ad\u30eb\u306f\u3042\u3068[[YELLOW]]{0}\u79d2\u9593[[GREEN]]\u4f7f\u3048\u307e\u305b\u3093\u3002
 Herbalism.Skills.GTe.Refresh=[[GREEN]]\u3042\u306a\u305f\u306e[[YELLOW]]\u30b0\u30ea\u30fc\u30f3\u30c6\u30e9[[GREEN]]\u30a2\u30d3\u30ea\u30c6\u30a3\u304c\u4f7f\u3048\u308b\u3088\u3046\u306b\u306a\u308a\u307e\u3057\u305f\uff01
+Herbalism.Skills.GTe.Other.Off=[[RED]]\u304d\u3053\u308a[[GREEN]]\u30b9\u30ad\u30eb\u306f\u3042\u3068[[YELLOW]]{0}\u79d2\u9593[[GREEN]]\u4f7f\u3048\u307e\u305b\u3093\u3002
+Herbalism.Skills.GTe.Other.On=[[\u7dd1]] {0} [[DARK_GREEN]]\u306f[[RED]\u30b9\u30ab\u30eb\u30b9\u30d7\u30ea\u30c3\u30bf\u30fc[[DARK_GREEN]]\u3092\u4f7f\u7528\u3057\u305f\uff01
 Mining.Ability.Length=[[RED]]\u30b9\u30fc\u30d1\u30fc\u30d6\u30ec\u30a4\u30ab\u30fc\u306e\u767a\u52d5\u6642\u9593: [[YELLOW]]{0}\u79d2
 Mining.Ability.Ready=[[GREEN]]**\u3042\u306a\u305f\u306f\u3001\u30d4\u30c3\u30b1\u30eb\u3092\u7528\u610f**
 Mining.Listener=\u30de\u30a4\u30cb\u30f3\u30b0:
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]\u3042\u306a\u305f\u306e[[YELLOW]]\u30b9\u30fc\u30d1\u30fc\u30d6\u30ec\u30a4\u30ab\u30fc[[GREEN]]\u30a2\u30d3\u30ea\u30c6\u30a3\u304c\u518d\u4f7f\u7528\u53ef\u80fd\u306b\u306a\u308a\u307e\u3057\u305f\uff01
 Mining.Skillup=[[YELLOW]\u30de\u30a4\u30cb\u30f3\u30b0\u30b9\u30ad\u30eb{0}\u306f\u5897\u3048\u305f\u3002\u5408\u8a08\uff08{1}\uff09
 Mining.Blast.Radius.Increase=[[RED]]\u7206\u767a\u306e\u534a\u5f84\u304c\u5897\u3048\u305f[[YELLOW]]+{0}
-Mining.Blast.Refresh=[[GREEN]]\u3042\u306a\u305f\u306e[[YELLOW]]\u7206\u7834\u63a1\u6398 [[GREEN]]\u80fd\u529b\u304c\u56de\u5fa9\u3057\u307e\u3057\u305f!
+Mining.Blast.Refresh=[[GREEN]]\u3042\u306a\u305f\u306e[[YELLOW]]\u30d6\u30e9\u30b9\u30c8\u30de\u30a4\u30cb\u30f3\u30b0[[GREEN]]\u30a2\u30d3\u30ea\u30c6\u30a3\u306f\u30ea\u30d5\u30ec\u30c3\u30b7\u30e5\u3055\u308c\u307e\u3057\u305f\uff01
 Repair.Effect.0=\u4fee\u7e55
 Repair.Effect.4=\u30b9\u30fc\u30d1\u30fc\u30ea\u30da\u30a2
 Repair.Effect.7=\u30c0\u30a4\u30e4\u30e2\u30f3\u30c9\u306e\u30c4\u30fc\u30eb & \u9632\u5177\u3092\u4fee\u7e55
@@ -35,11 +41,19 @@ Swords.Ability.Lower=[[GRAY]]**\u5263\u3092\u4e0b\u3052\u305f**
 Swords.Combat.Bleeding.Stopped=[[GRAY]]\u51fa\u8840\u306f [[GREEN]]\u6b62\u307e\u308a\u307e\u3057\u305f[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**\u6575\u304c\u51fa\u8840**
 Swords.Combat.Countered=[[GREEN]]**\u30ab\u30a6\u30f3\u30bf\u30fc\u30a2\u30bf\u30c3\u30af\uff01**
+Swords.Combat.SS.Struck=[[GREEN]]**\u8d77\u52d5\u3059\u308b\u30ae\u30b6\u30ae\u30b6\u306e\u30b9\u30c8\u30e9\u30a4\u30ad**
+Swords.Effect.2=[[\u7dd1]] **\u8d77\u52d5\u3059\u308b\u30ae\u30b6\u30ae\u30b6\u306e\u30b9\u30c8\u30e9\u30a4\u30ad**
 Swords.Skills.SS.On=[[GREEN]]**\u8d77\u52d5\u3059\u308b\u30ae\u30b6\u30ae\u30b6\u306e\u30b9\u30c8\u30e9\u30a4\u30ad**
+Swords.Skills.SS.Other.Off=[[RED]]\u304d\u3053\u308a[[GREEN]]\u30b9\u30ad\u30eb\u306f\u3042\u3068[[YELLOW]]{0}\u79d2\u9593[[GREEN]]\u4f7f\u3048\u307e\u305b\u3093\u3002
+Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] \u306f [[RED]]\u30b9\u30ab\u30eb\u30b9\u30d7\u30ea\u30c3\u30bf\u30fc[[DARK_GREEN]]\u3092\u4f7f\u7528\u3057\u305f\uff01
 Taming.Ability.Bonus.2=\u539a\u3044\u6bdb\u76ae
 Taming.Listener.Wolf=[[DARK_GRAY]]\u3042\u306a\u305f\u306e\u72fc\u306f\u3042\u306a\u305f\u306b\u3064\u3044\u3066\u3044\u304d\u307e\u3059
+Taming.Skillup=[[YELLOW]\u30de\u30a4\u30cb\u30f3\u30b0\u30b9\u30ad\u30eb{0}\u306f\u5897\u3048\u305f\u3002\u5408\u8a08\uff08{1}\uff09
+Unarmed.Ability.Berserk.Length=[[RED]]\u30b9\u30fc\u30d1\u30fc\u30d6\u30ec\u30a4\u30ab\u30fc\u306e\u767a\u52d5\u6642\u9593: [[YELLOW]]{0}\u79d2
 Unarmed.Listener=\u7d20\u624b:
 Unarmed.Skills.Berserk.Off=[[RED]]**\u30d0\u30fc\u30b5\u30fc\u30af\u304c\u30aa\u30d5\u306b\u306a\u308a\u307e\u3057\u305f**
+Unarmed.Skills.Berserk.Other.Off=[[RED]]\u304d\u3053\u308a[[GREEN]]\u30b9\u30ad\u30eb\u306f\u3042\u3068[[YELLOW]]{0}\u79d2\u9593[[GREEN]]\u4f7f\u3048\u307e\u305b\u3093\u3002
+Unarmed.Skills.Berserk.Other.On=[[GREEN]]{0}[[DARK_GREEN]] \u306f [[RED]]\u30b9\u30ab\u30eb\u30b9\u30d7\u30ea\u30c3\u30bf\u30fc[[DARK_GREEN]]\u3092\u4f7f\u7528\u3057\u305f\uff01
 Woodcutting.Ability.0=\u30ea\u30fc\u30d5\u30d6\u30ed\u30ef\u30fc
 Woodcutting.Ability.1=\u8449\u3063\u3071\u3092\u5439\u304d\u98db\u3070\u3059
 Woodcutting.Listener=\u6728\u3053\u308a:
@@ -49,6 +63,7 @@ Woodcutting.Skills.TreeFeller.Other.Off=[[RED]]\u304d\u3053\u308a[[GREEN]]\u30b9
 Woodcutting.Skills.TreeFeller.Splinter=[[RED]]\u3042\u306a\u305f\u306e\u65a7\u306f\u5341\u6570\u500b\u306e\u7834\u7247\u306b\u306a\u3063\u305f\uff01
 Ability.Generic.Template.Lock=[[GRAY]]{0}
 Ability.Generic.Template=[[RED]]{0}: [[YELLOW]]{1}
+Combat.BeastLoreHealth=[[DARK_AQUA]]{0}: [[GREEN]]{1}
 Combat.TouchedFuzzy=[[DARK_RED]]\u3042\u3044\u307e\u3044\u306a\u611f\u3058\u304c\u3057\u307e\u3057\u305f\u3002\u30d5\u30a7\u30eb\u30c8\u30fb\u30c7\u30a3\u30b8\u30fc\u3002
 Commands.AdminChat.Off=\u7ba1\u7406\u8005\u5c02\u7528\u30c1\u30e3\u30c3\u30c8\u306f[[RED]]off[[WHITE]]\u3067\u3059\u3002
 Commands.AdminToggle=[[RED]]- \u7ba1\u7406\u8005\u30c1\u30e3\u30c3\u30c8\u306b\u5207\u308a\u66ff\u3048
@@ -59,6 +74,7 @@ Commands.mcgod=[[RED]]- GodMode\u306e\u5207\u308a\u66ff\u3048
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - \u30bf\u30fc\u30b2\u30c3\u30c8\u3092\u5909\u66f4\u3057\u307e\u3059
 Commands.Party.Kick=[[RED]]\u3042\u306a\u305f\u306f\u3001\u30d1\u30fc\u30c6\u30a3\u30fc{0}\u304b\u3089\u8ffd\u3044\u51fa\u3055\u308c\u307e\u3057\u305f
 Commands.Party.Leave=[[RED]]\u30d1\u30fc\u30c6\u30a3\u30fc\u304b\u3089\u8131\u9000\u3057\u307e\u3057\u305f\u3002
+Commands.PowerLevel.Leaderboard=[[DARK_RED]]\u30d1\u30ef\u30fc\u30ec\u30d9\u30eb:[[GREEN]]{0}
 Commands.PowerLevel=[[DARK_RED]]\u30d1\u30ef\u30fc\u30ec\u30d9\u30eb:[[GREEN]]{0}
 Commands.Usage.PartyName=\u540d\u524d
 Commands.Usage.Password=\u30d1\u30b9\u30ef\u30fc\u30c9
@@ -69,10 +85,11 @@ Party.Unlocked=[[GRAY]]\u30d1\u30fc\u30c6\u30a3\u30fc\u306e\u30ed\u30c3\u30af\u3
 Party.ItemShare.Category.Mining=\u9271\u696d
 Party.ItemShare.Category.Woodcutting=\u4f10\u63a1
 Commands.XPGain.Excavation=\u6398\u524a\u3057\u3066\u5b9d\u7269\u3092\u898b\u3064\u3051\u3088\u3046
-Commands.XPGain.Herbalism=\u85ac\u8349\u306e\u53ce\u7a6b
+Commands.XPGain.Herbalism=Harvesting Herbs
 Commands.XPGain.Mining=\u9271\u696d\u77f3\u3068\u9271\u77f3
 Commands.XPGain.Taming=\u52d5\u7269\u3092\u98fc\u3044\u6163\u3089\u3059\u3001\u307e\u305f\u306f\u6226\u95d8\u3092\u3059\u308b/\u3042\u306a\u305f\u306e\u72fc
 Commands.XPGain=[[DARK_GRAY]]\u7d4c\u9a13\u5024\u3092\u624b\u306b\u5165\u308c\u305f: [[WHITE]]{0}
+Commands.xprate.proper.0=[[RED]]XP\u30ec\u30fc\u30c8\u3092\u5909\u66f4\u3059\u308b\u9069\u5207\u306a\u65b9\u6cd5\u306f /xprate <integer> <true/false>
 XPRate.Event=[[GOLD]]mcMMO\u306f\u4ecaEX\u30ec\u30fc\u30c8\u30a4\u30d9\u30f3\u30c8\u3092\u958b\u50ac\u4e2d\uff01EX\u306e\u30ec\u30fc\u30c8\u306f {0}\u500d\u3067\u3059\uff01
 Effects.Effects=\u52b9\u679c
 Effects.Template=[[DARK_AQUA]]{0}: [[GREEN]]{1}
@@ -86,3 +103,10 @@ Stats.Own.Stats=[[GREEN]][mcMMO] \u7d71\u8a08\u60c5\u5831
 Commands.Description.mcremove=mcMMO\u306e\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u304b\u3089\u30e6\u30fc\u30b6\u3092\u524a\u9664\u3057\u307e\u3059\u3002
 UpdateChecker.outdated=\u53e4\u3044\u30d0\u30fc\u30b8\u30e7\u30f3\u306emcMMO\u3092\u4f7f\u7528\u3057\u3066\u3044\u307e\u3059!
 UpdateChecker.newavailable=BukkitDev\u306b\u65b0\u3057\u3044\u30d0\u30fc\u30b8\u30e7\u30f3\u304c\u3042\u308a\u307e\u3059\u3002
+Scoreboard.Header.PlayerStats=mcMMO \u30b9\u30c6\u30fc\u30bf\u30b9
+Scoreboard.Header.PlayerRank=\uff4d\uff43MMO \u30e9\u30f3\u30ad\u30f3\u30b0
+Scoreboard.Header.PlayerInspect=McMMO \u30b9\u30c6\u30fc\u30bf\u30b9\uff1a
+Scoreboard.Header.PowerLevel=\u30d1\u30ef\u30fc\u30ec\u30d9\u30eb
+Scoreboard.Misc.PowerLevel=\u30d1\u30ef\u30fc\u30ec\u30d9\u30eb
+Scoreboard.Misc.Level=\u30ec\u30d9\u30eb
+Scoreboard.Misc.RemainingXP=\u6b8b\u308aXP
