--- a/src/main/resources/locale/locale_lt.properties
+++ b/src/main/resources/locale/locale_lt.properties
@@ -6,9 +6,11 @@ Herbalism.Listener=\u017dOLININKYST\u0116
 Mining.Ability.Ready=[[GREEN]]**TU PARUOSEI SAVO KIRTIKLI**
 Mining.Skillup=[[YELLOW]]Kasinejimo igudis pakilo {0}. Bendras ({1})
 Mining.Blast.Refresh=[[GREEN]]Tavo [[YELLOW]]Sprogimo kasimo [[GREEN]]sugeb\u0117jimas atsinaujino!
+Repair.Arcane.Fail=[[RED]]Papildomi u\u017epurimai, visam laikui paliko \u0161\u012f daigt\u0105.
 Swords.Combat.Bleeding.Stopped=[[GRAY]]Kraujavimas [[GREEN]]sustojo[[GRAY]]!
 Commands.Party.Kick=[[RED]]Tu buvai i\u0161mestas i\u0161 grup\u0117s {0}!
 Party.Unlocked=[[GRAY]]Grupe yra atrakinta
+Commands.XPGain.Mining=Kasti Akmen\u012f ir r\u016bd\u0105
 Commands.XPGain.Taming=Gyvunu prijaukinimas arba kova su savo vilkais
 Commands.XPGain=[[DARK_GRAY]]PATIRTIES GAUTA: [[WHITE]]{0}
 Stats.Header.Combat=[[GOLD]]-=KOVOS IGUDZIAI=-
