--- a/src/main/resources/locale/locale_zh_CN.properties
+++ b/src/main/resources/locale/locale_zh_CN.properties
@@ -38,6 +38,7 @@ Axes.Combat.CritChance=[[RED]]\u66b4\u51fb\u51e0\u7387: [[YELLOW]]{0}%
 Axes.Combat.CriticalHit=[[RED]]\u66b4\u51fb!
 Axes.Combat.GI.Proc=[[GREEN]]**\u5de8\u529b\u6253\u51fb**
 Axes.Combat.GI.Struck=[[RED]]**\u88ab\u5f3a\u70c8\u51b2\u51fb\u51fb\u4e2d**
+Axes.Combat.SS.Struck=[[DARK_RED]]\u88ab\u65a9\u9996\u8005\u6280\u80fd\u653b\u51fb!
 Axes.Combat.SS.Length=[[RED]]\u65a9\u9996\u8005\u6280\u80fd\u6301\u7eed\u65f6\u95f4: [[YELLOW]]{0}s
 Axes.Effect.0=\u65a9\u9996\u8005 (\u4e3b\u52a8\u6280\u80fd)
 Axes.Effect.1=\u9020\u6210\u8303\u56f4\u4f24\u5bb3
@@ -116,7 +117,7 @@ Herbalism.Effect.0=\u571f\u795e\u5e87\u4f51 (\u4e3b\u52a8\u6280\u80fd)
 Herbalism.Effect.1=\u64ad\u6492\u5973\u795e\u7684\u6069\u60e0, \u83b7\u5f973\u500d\u6389\u7387
 Herbalism.Effect.2=\u7eff\u5316 (\u5c0f\u9ea6)
 Herbalism.Effect.3=\u6536\u83b7\u7684\u65f6\u5019\u81ea\u52a8\u79cd\u690d\u5c0f\u9ea6
-Herbalism.Effect.4=\u7eff\u5316 (\u788e\u77f3/\u77f3\u5757)
+Herbalism.Effect.4=\u7eff\u5316 (\u65b9\u5757)
 Herbalism.Effect.5=\u788e\u77f3/\u77f3\u5757 -> \u7528\u79cd\u5b50\u4f7f\u5b83\u4eec\u53d8\u6210\u9752\u82d4\u77f3,\u6216\u8005\u8ba9\u8349\u751f\u957f
 Herbalism.Effect.6=\u519c\u592b\u98df\u8c31
 Herbalism.Effect.7=\u98df\u7528\u519c\u4ea7\u54c1\u65f6\u989d\u5916\u56de\u590d\u9965\u997f\u5ea6
@@ -228,7 +229,6 @@ Swords.Combat.Counter.Hit=[[DARK_RED]]\u4f60\u53cd\u51fb\u4e86\u5bf9\u624b!
 Swords.Combat.Countered=[[GREEN]]**\u53cd\u51fb\u4e86\u654c\u4eba**
 Swords.Combat.SS.Struck=[[DARK_RED]]\u53d1\u52a8\u952f\u9f7f\u653b\u51fb\uff01
 Swords.Effect.0=\u53cd\u51fb
-Swords.Effect.1=\u53cd\u5c04 {0} \u6240\u53d7\u4f24\u5bb3
 Swords.Effect.2=\u952f\u9f7f\u653b\u51fb (\u4e3b\u52a8\u6280\u80fd)
 Swords.Effect.3={0} \u4f24\u5bb3\u8303\u56f4; \u6d41\u8840\u8303\u56f4
 Swords.Effect.4=\u952f\u9f7f\u653b\u51fb\u6d41\u8840\u4f24\u5bb3\u589e\u52a0
@@ -389,6 +389,7 @@ Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - \u7f16\u8f91\u76ee\u6807
 Commands.mmoedit.AllSkills.1=[[GREEN]]\u4f60\u7684\u6240\u6709\u6280\u80fd\u7b49\u7ea7\u8bbe\u7f6e\u4e3a {0}!
 Commands.mmoedit.Modified.1=[[GREEN]]\u4f60\u7684\u7b49\u7ea7 {0} \u88ab\u8bbe\u7f6e\u4e3a {1}!
 Commands.mmoedit.Modified.2=[[RED]]{0} \u5df2\u66f4\u6539\u4e3a {1}.
+Commands.mmoshowdb=[[YELLOW]]\u5f53\u524d\u4f7f\u7528\u7684\u6570\u636e\u5e93\u4e3a [[GREEN]]{0}
 Commands.ModDescription=[[RED]]- \u8bf7\u9605\u8bfb\u7b80\u8981\u63d2\u4ef6\u63cf\u8ff0
 Commands.NoConsole=\u8fd9\u4e2a\u6307\u4ee4\u4e0d\u652f\u6301\u5728\u63a7\u5236\u53f0\u4f7f\u7528.
 Commands.Notifications.Off=\u6280\u80fd\u63d0\u793a [[RED]]\u5173\u95ed
@@ -449,6 +450,7 @@ Commands.Usage.0=[[RED]]\u6b63\u786e\u7684\u7528\u6cd5 /{0}
 Commands.Usage.1=[[RED]]\u6b63\u786e\u7684\u7528\u6cd5\u5e94\u4e3a /{0} {1}
 Commands.Usage.2=[[RED]]\u6b63\u786e\u7684\u7528\u6cd5 /{0} {1} {2}
 Commands.Usage.3=[[RED]]\u6b63\u786e\u7684\u7528\u6cd5  /{0} {1} {2} {3}
+Commands.Usage.FullClassName=\u5355\u5143\u540d\u79f0
 Commands.Usage.Level=\u7b49\u7ea7
 Commands.Usage.Message=\u6d88\u606f
 Commands.Usage.Page=\u9875
@@ -560,7 +562,6 @@ Guides.Mining=[[DARK_AQUA]]\u5173\u4e8e\u91c7\u77ff\uff1a\n[[YELLOW]]\u5728\u91c
 Guides.Page.Invalid=\u4e0d\u662f\u4e00\u4e2a\u6709\u6548\u7684\u9875\u6570!
 Guides.Page.OutOfRange=\u90a3\u9875\u4e0d\u5b58\u5728, \u603b\u5171\u53ea\u6709 {0} \u9875
 Guides.Repair=[[DARK_AQUA]]\u5173\u4e8e\u4fee\u7406:\n[[YELLOW]]\u4fee\u7406\u529f\u80fd\u53ef\u4ee5\u4e3a\u4f60\u63d0\u4f9b\u4e86\u7528\u4e00\u4e2a\u94c1\u65b9\u5757\u6765\u4fee\u7406\u62a4\u7532\u548c\n[[YELLOW]]\u5de5\u5177\u7684\u5730\u65b9, \u6216\u8005\u7528\u4e00\u4e2a\u91d1\u8272\u65b9\u5757\u6765\u5206\u89e3\u62a4\u7532\u548c\u5de5\u5177.\n[[DARK_AQUA]]\u83b7\u53d6\u7ecf\u9a8c:\n[[YELLOW]]\u4f7f\u7528mcMMO\u7684\u94c1\u6be1\u6765\u4fee\u7406\u5de5\u5177\u6216\u62a4\u7532. \u8fd9\u4e2a\u94c1\u7827\u53ef\u4ee5\u662f\n[[YELLOW]]\u9ed8\u8ba4\u7684\u94c1\u5757\u4e14\u4e0d\u80fd\u548c\u539f\u7248\u7684Minecraft\u94c1\u7827\u6df7\u6dc6.\n[[DARK_AQUA]]\u6211\u600e\u4e48\u624d\u80fd\u4fee\u7406?\n[[YELLOW]]\u653e\u7f6e\u4e00\u4e2a mcMMO \u7684\u94c1\u7827\u5e76\u4e14\u70b9\u51fb\u53f3\u952e\u6765\u4fee\u7406 \n[[YELLOW]]\u4f60\u76ee\u524d\u62ff\u5728\u624b\u4e0a\u7684\u7269\u54c1. \u6bcf\u70b9\u51fb\u4e00\u6b21\u6d88\u8017\u4e00\u4e2a\u7269\u54c1.\n[[DARK_AQUA]]\u4ec0\u4e48\u662f\u4fee\u7406\u7cbe\u901a?\n[[YELLOW]]\u63d0\u9ad8\u4fee\u7406\u8010\u4e45\u91cf\n[[YELLOW]]\u989d\u5916\u56de\u590d\u91cf\u4e0e\u4fee\u7406\u7b49\u7ea7\u6709\u5173\n[[DARK_AQUA]]\u4ec0\u4e48\u662f\u8d85\u7ea7\u4fee\u7406?\n[[YELLOW]]\u8fd9\u662f\u4e00\u4e2a\u88ab\u52a8\u6280\u80fd\n[[YELLOW]]\u5f53\u73a9\u5bb6\u8fdb\u884c\u4fee\u7406\u65f6\n[[YELLOW]]\u6062\u590d\u53cc\u500d\u7684\u8010\u4e45\n[[DARK_AQUA]]\u4ec0\u4e48\u662f\u795e\u79d8\u953b\u9020?\n[[YELLOW]]\u8fd9\u662f\u4e00\u4e2a\u88ab\u52a8\u6280\u80fd\n[[YELLOW]]\u4fee\u7406\u9644\u9b54\u88c5\u5907\u65f6\u4e00\u5b9a\u51e0\u7387\u4fdd\u6301\u9644\u9b54\n[[YELLOW]]\u4e14\u4fdd\u7559\u7b49\u7ea7, \u6216\u964d\u7ea7\n[[YELLOW]]\u6216\u5931\u53bb\u9644\u9b54\u6548\u679c\n[[DARK_AQUA]]\u4ec0\u4e48\u662f\u5206\u89e3\u7827?\n[[YELLOW]]\u653e\u7f6e\u4e00\u4e2a mcMMO \u5206\u89e3\u7827\n[[YELLOW]]\u624b\u6301\u7269\u54c1\u53f3\u952e\u5b83\n[[YELLOW]]\u5c06\u4f1a\u5206\u89e3\u6389\u7269\u54c1, \u8fd4\u8fd8\u4e00\u4e9b\u6750\u6599\n[[YELLOW]]\u6ce8\u610f: \u53ea\u80fd\u5206\u89e3\u65e0\u635f\u7684\u5de5\u5177\u6216\u62a4\u7532\u88c5\u5907
-Guides.Swords=[[DARK_AQUA]]\u5173\u4e8e \u5251\u672f:\n[[YELLOW]]\u4f7f\u7528\u5251\u8fdb\u884c\u6218\u6597\u65f6\n[[YELLOW]]\u9644\u52a0\u989d\u5916\u6548\u679c\n[[DARK_AQUA]]\u5982\u4f55\u83b7\u5f97\u7ecf\u9a8c:\n[[YELLOW]]\u4f7f\u7528\u5251\u6218\u6597\n[[YELLOW]]\u7ecf\u9a8c\u503c\u53d6\u51b3\u4e8e\u5bf9\u751f\u7269\u548c\u5176\u4ed6\u73a9\u5bb6\u9020\u6210\u7684\u4f24\u5bb3\n[[DARK_AQUA]]\u5982\u4f55\u4f7f\u7528\u952f\u9f7f\u653b\u51fb?\n[[YELLOW]]\u8fd9\u662f\u4e00\u4e2a\u4e3b\u52a8\u6280\u80fd, \u624b\u6301\u5251\u53f3\u952e\u4ee5\u6fc0\u6d3b\n[[YELLOW]]\u8fd9\u4e2a\u6280\u80fd\u4f1a\u9020\u6210\u8303\u56f4\u6253\u51fb\u6548\u679c\n[[YELLOW]]\u8be5\u8303\u56f4\u5185\u670925%\u989d\u5916\u4f24\u5bb3\u52a0\u6210\n[[YELLOW]]\u5e76\u9644\u52a05\u523b(tick)\u6d41\u8840\u6548\u679c\n[[DARK_AQUA]]\u53cd\u51fb\u5982\u4f55\u5de5\u4f5c?\n[[YELLOW]]\u8fd9\u662f\u4e00\u4e2a\u88ab\u52a8\u6280\u80fd. \n[[YELLOW]]\u5f53\u4f60\u53d7\u5230\u751f\u7269\u7684\u653b\u51fb\n[[YELLOW]]\u6709\u4e00\u5b9a\u51e0\u7387\u53cd\u51fb\u6240\u53d7\u4f24\u5bb3\u768450%\n[[DARK_AQUA]]\u4ec0\u4e48\u662f\u6d41\u8840?\n[[YELLOW]]\u6d41\u8840\u7684\u654c\u4eba\u6bcf2\u79d2\u53d7\u5230\u4e00\u6b21\u4f24\u5bb3 \n[[YELLOW]]\u76ee\u6807\u6d41\u8840\u6548\u679c\u76f4\u5230\u6548\u679c\u6d88\u5931 \n[[YELLOW]]\u6216\u76ee\u6807\u6b7b\u4ea1\n[[YELLOW]]\u6301\u7eed\u65f6\u95f4\u4e0e\u5251\u672f\u7b49\u7ea7\u6709\u5173
 Guides.Smelting=\u5373\u5c06\u5230\u6765...
 Guides.Taming=[[DARK_AQUA]]\u5173\u4e8e \u9a6f\u517d:\n[[YELLOW]]\u5f53\u73a9\u5bb6\u4f7f\u7528\u9a6f\u670d\u7684\u72fc\u6218\u6597\u65f6\n[[YELLOW]]\u7ed9\u73a9\u5bb6\u63d0\u4f9b\u4e30\u5bcc\u7684\u989d\u5916\u6218\u6597\u52a0\u6210\n[[DARK_AQUA]]\u7ecf\u9a8c\u83b7\u53d6:\n[[YELLOW]]\u9a6f\u670d\u72fc/\u8c79\u732b\n[[YELLOW]]\u4e0e\u4f60\u7684\u72fc\u4e00\u540c\u6218\u6597\n[[DARK_AQUA]]\u4ec0\u4e48\u662f\u91ce\u6027\u547c\u5524?\n[[YELLOW]]\u8fd9\u662f\u4e00\u4e2a\u4e3b\u52a8\u6280\u80fd\n[[YELLOW]]\u53ec\u5524\u4e00\u53ea\u72fc\u6216\u8c79\u732b\u5230\u4f60\u8eab\u8fb9\n[[YELLOW]]\u624b\u6301\u9aa8\u5934\u6216\u751f\u9c7c\u5de6\u952e\u8fdb\u884c\u53ec\u5524\n[[DARK_AQUA]]\u4ec0\u4e48\u662f\u517d\u738b\u6280\u80fd?\n[[YELLOW]]\u5141\u8bb8\u73a9\u5bb6\u67e5\u770b\u5ba0\u7269\n[[YELLOW]]\u68c0\u67e5\u72fc\u548c\u8c79\u732b\u72b6\u6001\n[[YELLOW]]\u5de6\u952e\u4e00\u53ea\u72fc\u6216\u8c79\u732b\u4f7f\u7528\u8be5\u6280\u80fd\n[[DARK_AQUA]]\u4ec0\u4e48\u55dc\u8840?\n[[YELLOW]]\u8fd9\u662f\u4e00\u4e2a\u88ab\u52a8\u6280\u80fd\n[[YELLOW]]\u72fc\u653b\u51fb\u76ee\u6807\u65f6\u4e00\u5b9a\u51e0\u7387\u4f7f\u4e4b\u6d41\u8840\n[[DARK_AQUA]]\u4ec0\u4e48\u662f\u5229\u722a?\n[[YELLOW]]\u4e3a\u72fc\u7684\u653b\u51fb\u63d0\u4f9b\u989d\u5916\u4f24\u5bb3\n[[YELLOW]]\u989d\u5916\u4f24\u5bb3\u53d6\u51b3\u4e8e\u9a6f\u517d\u7b49\u7ea7\n[[DARK_AQUA]]\u4ec0\u4e48\u662f\u73af\u5883\u611f\u77e5?\n[[YELLOW]]\u8fd9\u662f\u4e00\u4e2a\u88ab\u52a8\u6280\u80fd\n[[YELLOW]]\u5f53\u72fc\u611f\u77e5\u5230\u5468\u56f4\u7684\u5371\u9669\u65f6\u4f20\u9001\u5230\u4f60\u8eab\u8fb9, \u5982\u4ed9\u4eba\u638c,\u5ca9\u6d46\n[[YELLOW]]\u4e00\u5b9a\u7a0b\u5ea6\u4e0a\u4f1a\u514d\u75ab\u6389\u843d\u4f24\u5bb3\n[[DARK_AQUA]]\u4ec0\u4e48\u662f\u539a\u5b9e\u7684\u76ae\u6bdb?\n[[YELLOW]]\u8fd9\u662f\u4e00\u4e2a\u88ab\u52a8\u6280\u80fd\n[[YELLOW]]\u51cf\u5c11\u72fc\u6240\u53d7\u4f24\u5bb3, \u63d0\u9ad8\u706b\u7130\u6297\u6027\n[[DARK_AQUA]]\u4ec0\u4e48\u662f\u7206\u7834\u9632\u5fa1?\n[[YELLOW]]\u8fd9\u662f\u4e00\u4e2a\u88ab\u52a8\u6280\u80fd\n[[YELLOW]]\u51cf\u5c11\u7206\u70b8\u6548\u679c\u5bf9\u72fc\u9020\u6210\u7684\u4f24\u5bb3\n[[DARK_AQUA]]\u4ec0\u4e48\u662f\u5feb\u9910\u670d\u52a1\uff08\u5438\u8840\uff09?\n[[YELLOW]]\u8fd9\u662f\u4e00\u4e2a\u88ab\u52a8\u6280\u80fd\n[[YELLOW]]\u653b\u51fb\u65f6\u6062\u590d\u751f\u547d\u503c
 Guides.Unarmed=[[DARK_AQUA]]\u5173\u4e8e \u683c\u6597:\n[[YELLOW]]\u5f53\u73a9\u5bb6\u4ee5\u62f3\u5934\u4f5c\u4e3a\u6b66\u5668\u65f6\n[[YELLOW]]\u7ed9\u4e88\u73a9\u5bb6\u4e30\u5bcc\u7684\u6218\u6597\u6548\u679c\u52a0\u6210\n[[DARK_AQUA]]\u7ecf\u9a8c\u83b7\u53d6:\n[[YELLOW]]\u7ecf\u9a8c\u91cf\u53d6\u51b3\u4e8e\n[[YELLOW]]\u7a7a\u624b\u5bf9\u751f\u7269\u6216\u73a9\u5bb6\u9020\u6210\u7684\u4f24\u5bb3\n[[DARK_AQUA]]\u4ec0\u4e48\u662f\u72c2\u66b4?\n[[YELLOW]]\u8fd9\u662f\u4e00\u4e2a\u4e3b\u52a8\u6280\u80fd, \u53f3\u952e\u89e6\u53d1\n[[YELLOW]]\u5904\u4e8e\u72c2\u66b4\u72b6\u6001\u65f6, \u9644\u52a0 50% \u989d\u5916\u4f24\u5bb3\n[[YELLOW]]\u5e76\u7acb\u5373\u51fb\u788e\u4e00\u4e9b\u65b9\u5757\n[[YELLOW]]\u5982\u6ce5\u571f, \u8349\u5730\n[[DARK_AQUA]]\u94c1\u62f3\u662f\u4ec0\u4e48?\n[[YELLOW]]\u7a7a\u624b\u65f6, \u63d0\u9ad8\u4f60\u5bf9\u602a\u7269\n[[YELLOW]]\u6216\u73a9\u5bb6\u9020\u6210\u7684\u4f24\u5bb3 \n[[DARK_AQUA]]\u4ec0\u4e48\u662f\u7bad\u77e2\u62b5\u5fa1?\n[[YELLOW]]\u8fd9\u662f\u4e00\u4e2a\u88ab\u52a8\u6280\u80fd\n[[YELLOW]]\u62b5\u5fa1\u9ab7\u9ac5\u6216\u73a9\u5bb6\u5c04\u6765\u7684\u7bad\u77e2\n[[YELLOW]]\u7bad\u77e2\u4f1a\u65e0\u5bb3\u7684\u6389\u843d\u5230\u5730\u4e0a\n[[DARK_AQUA]]\u4ec0\u4e48\u662f\u8d85\u5f3a\u63e1\u529b?\n[[YELLOW]]\u8fd9\u662f\u4e00\u4e2a\u88ab\u52a8\u6280\u80fd, \u7528\u6765\u5bf9\u4ed8\u7f34\u68b0\n[[YELLOW]]\u683c\u6597\u6280\u80fd\u8d8a\u9ad8, \u62b5\u5fa1\u7f34\u68b0\u7684\u51e0\u7387\u8d8a\u5927\n[[DARK_AQUA]]\u4ec0\u4e48\u662f\u7f34\u68b0?\n[[YELLOW]]\u8fd9\u662f\u4e00\u4e2a\u88ab\u52a8\u6280\u80fd, \u4f7f\u5176\u4ed6\u73a9\u5bb6\u88ab\u7f34\u68b0\n[[YELLOW]]\u76ee\u6807\u88c5\u5907\u4f1a\u6389\u5230\u5730\u4e0a
@@ -607,11 +608,7 @@ Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] \u719f\u7ec3\u5ea
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]\u4f60\u4ece [[YELLOW]]{1} \u5077\u53d6 [[BLUE]]{0}[[DARK_AQUA]] \u7ea7
 Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] \u65e0\u6cd5\u4ece\u4f60\u90a3\u91cc\u7a83\u53d6\u77e5\u8bc6!
 Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] \u4ece\u4f60\u90a3\u91cc\u5077\u53d6 [[BLUE]]{1}[[DARK_RED]] \u7b49\u7ea7!
-Hardcore.Disabled=[[GOLD]][mcMMO] Hardcore \u6a21\u5f0f\u5df2\u7981\u7528
-Hardcore.Enabled=[[GOLD]][mcMMO] \u542f\u7528\u786c\u6838\u6a21\u5f0f
 Hardcore.PercentageChanged=[[GOLD]][mcMMO] \u72b6\u6001\u4e22\u5931\u767e\u5206\u6bd4\u8bbe\u7f6e\u4e3a {0}.
-Vampirism.Disabled=[[GOLD]][mcMMO] Vampirism \u6a21\u5f0f\u5df2\u5173\u95ed
-Vampirism.Enabled=[[GOLD]][mcMMO] Vampirism \u6a21\u5f0f\u5df2\u5f00\u542f
 Vampirism.PercentageChanged=[[GOLD]][mcMMO] \u72b6\u6001\u69a8\u53d6\u767e\u5206\u6bd4\u8bbe\u7f6e\u4e3a {0}.
 Spout.Donate=[[YELLOW]][mcMMO] \u6350\u6b3e!
 Spout.LevelUp.1=[[GREEN]]\u5347\u7ea7!
@@ -664,6 +661,8 @@ Commands.Description.mcremove=\u4ecemcMMO\u6570\u636e\u5e93\u4e2d\u79fb\u9664\u4
 Commands.Description.mcstats=\u663e\u793a\u4f60\u7684 mcMMO \u7b49\u7ea7\u548c\u7ecf\u9a8c
 Commands.Description.mctop=\u663e\u793a mcMMO\u6392\u884c\u699c
 Commands.Description.mmoedit=\u7ed9\u73a9\u5bb6\u8bbe\u7f6e mcMMO\u7b49\u7ea7
+Commands.Description.mmoupdate=\u4ece\u4e00\u4e2a\u8001\u7684mcMMO\u6570\u636e\u5e93\u8fc1\u79fb\u5230\u5f53\u524d\u6570\u636e\u5e93\u5185
+Commands.Description.mmoshowdb=\u663e\u793a\u5f53\u524d\u6570\u636e\u5e93\u7c7b\u578b\u540d\u79f0 (\u8fc7\u540e\u66f4\u65b0\u4f7f\u7528 /mmoupdate)
 Commands.Description.party=\u63a7\u5236\u5404\u79cd mcMMO \u961f\u4f0d\u8bbe\u7f6e
 Commands.Description.partychat=\u5207\u6362mcMMO\u961f\u4f0d\u804a\u5929\u6216\u53d1\u9001\u961f\u4f0d\u804a\u5929\u6d88\u606f
 Commands.Description.ptp=\u4f20\u9001\u81f3mcMMO\u961f\u4f0d\u6210\u5458
@@ -674,3 +673,12 @@ Commands.Description.xplock=\u9501\u5b9a\u6307\u5b9amcMMO\u6280\u80fd\u7684\u7ec
 Commands.Description.xprate=\u66f4\u6539mcMMO\u7ecf\u9a8c\u500d\u7387\u6216\u5f00\u542f\u4e00\u4e2amcMMO\u7ecf\u9a8c\u7ffb\u500d\u4e8b\u4ef6
 UpdateChecker.outdated=\u4f60\u6b63\u4f7f\u7528\u7740\u4e00\u4e2a\u8fc7\u65f6\u7248\u672c\u7684mcMMO!
 UpdateChecker.newavailable=\u53d1\u73b0BukkitDev\u4e0a\u6709\u53ef\u7528\u65b0\u7248\u672c.
+Scoreboard.Header.PlayerStats=mcMMO \u7edf\u8ba1
+Scoreboard.Header.PlayerRank=mcMMO \u6392\u540d
+Scoreboard.Header.PlayerInspect=mcMMO \u7edf\u8ba1:
+Scoreboard.Header.PowerLevel=\u7efc\u5408\u80fd\u529b\u7b49\u7ea7
+Scoreboard.Misc.PowerLevel=\u7efc\u5408\u80fd\u529b\u7b49\u7ea7
+Scoreboard.Misc.Level=\u7b49\u7ea7
+Scoreboard.Misc.CurrentXP=\u5f53\u524d\u7ecf\u9a8c
+Scoreboard.Misc.RemainingXP=\u5347\u7ea7\u6240\u9700\u7ecf\u9a8c
+Scoreboard.Misc.Overall=\u603b\u4f53
