Add per-skill XP boost perks.
Fixes #1412

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -676,7 +676,7 @@ Stats.Own.Stats=[[GREEN]][mcMMO] Stats
 
 #PERKS
 Perks.xp.name=Experience
-Perks.xp.desc=Receive {0}x XP.
+Perks.xp.desc=Receive boosted XP in certain skills.
 Perks.lucky.name=Luck
 Perks.lucky.desc=Gives {0} skills and abilities a 33.3% better chance to activate.
 Perks.lucky.desc.login=Gives certain skills and abilities a 33.3% better chance to activate.
